@@ -22,7 +22,6 @@ package org.netbeans.modules.j2ee.sun.validation.constraints;
 import java.util.ArrayList;
 import java.util.Collection;
 
-import org.netbeans.modules.j2ee.sun.validation.constraints.ConstraintFailure;
 import org.netbeans.modules.j2ee.sun.validation.util.BundleReader;
 
 /**
@@ -64,7 +63,7 @@ public class NumberConstraint extends ConstraintUtils
         ArrayList failed_constrained_list = new ArrayList();
         if(null != value){
             try {
-                new Double(value);
+                Double.valueOf(value);
                 return failed_constrained_list;
             } catch(NumberFormatException e) {
                 String failureMessage = formatFailureMessage(toString(), value,
