@@ -196,8 +196,8 @@ public final class PayaraDDProvider {
         }
     }
 
-    final private Map<Object, RootInterface> ddMap = new WeakHashMap<Object, RootInterface>();
-    private Map<FileObject, DDProviderDataObject> dObjMap = new WeakHashMap<FileObject, DDProviderDataObject>();
+    private final Map<Object, RootInterface> ddMap = new WeakHashMap<>();
+    private Map<FileObject, DDProviderDataObject> dObjMap = new WeakHashMap<>();
 
     /**
      * This method retrieves the root of the XML DOM for a sun-* deployment
@@ -342,12 +342,12 @@ public final class PayaraDDProvider {
         }
     }
 
-    final private static Map<Class, Map<String, VersionInfo>> apiToVersionMap = new HashMap<Class, Map<String, VersionInfo>>(11);
-    final private static Map<String, VersionInfo> sunWebAppVersionMap = new HashMap<String, VersionInfo>(11);
-    final private static Map<String, VersionInfo> sunEjbJarVersionMap = new HashMap<String, VersionInfo>(11);
-    final private static Map<String, VersionInfo> sunApplicationVersionMap = new HashMap<String, VersionInfo>(11);
-    final private static Map<String, VersionInfo> sunAppClientVersionMap = new HashMap<String, VersionInfo>(11);
-    final private static Map<String, VersionInfo> sunResourcesVersionMap = new HashMap<String, VersionInfo>(11);
+    private static final Map<Class, Map<String, VersionInfo>> apiToVersionMap = new HashMap<Class, Map<String, VersionInfo>>(11);
+    private static final Map<String, VersionInfo> sunWebAppVersionMap = new HashMap<String, VersionInfo>(11);
+    private static final Map<String, VersionInfo> sunEjbJarVersionMap = new HashMap<String, VersionInfo>(11);
+    private static final Map<String, VersionInfo> sunApplicationVersionMap = new HashMap<String, VersionInfo>(11);
+    private static final Map<String, VersionInfo> sunAppClientVersionMap = new HashMap<String, VersionInfo>(11);
+    private static final Map<String, VersionInfo> sunResourcesVersionMap = new HashMap<String, VersionInfo>(11);
 
     static {
         sunWebAppVersionMap.put(SunWebApp.VERSION_2_3_0, new VersionInfo(
@@ -467,7 +467,6 @@ public final class PayaraDDProvider {
     public RootInterface newGraph(Class rootType, String version) {
         RootInterface result = null;
         SunBaseBean graphRoot = null;
-        Class graphRootClass = null;
 
         Map<String, VersionInfo> versionMap = apiToVersionMap.get(rootType);
         if (versionMap != null) {
@@ -476,7 +475,7 @@ public final class PayaraDDProvider {
                 try {
                     // Formerly invoked static 'createGraph()' method, but that is merely a wrapper 
                     // for the default constructor so we'll call it directly.
-                    graphRoot = (SunBaseBean) vInfo.getImplClass().newInstance();
+                    graphRoot = (SunBaseBean) vInfo.getImplClass().getDeclaredConstructor().newInstance();
                     graphRoot.graphManager().setDoctype(vInfo.getPublicId(), vInfo.getSystemId());
 
                     Class proxyClass = vInfo.getProxyClass();
@@ -746,6 +745,7 @@ public final class PayaraDDProvider {
      * determined.
      * @deprecated
      */
+    @Deprecated
     public static ASDDVersion getASDDVersion(RootInterface rootDD) {
         return getASDDVersion(rootDD, null);
     }
@@ -1005,7 +1005,7 @@ public final class PayaraDDProvider {
 
     /* Maps DOCTYPE to { version, proxy class, impl class, dtd path } info.
      */
-    final private static Map<String, DocTypeInfo> publicIdToInfoMap = new HashMap<String, DocTypeInfo>(37);
+    private static final Map<String, DocTypeInfo> publicIdToInfoMap = new HashMap<String, DocTypeInfo>(37);
 
     static {
 
