@@ -28,6 +28,7 @@ import java.io.File;
 import java.io.FilenameFilter;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.OutputStream;
 import java.io.PrintStream;
 import java.lang.ref.Reference;
 import java.lang.ref.SoftReference;
@@ -36,6 +37,7 @@ import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLClassLoader;
+import java.nio.charset.StandardCharsets;
 import java.security.AllPermission;
 import java.security.CodeSource;
 import java.security.PermissionCollection;
@@ -56,6 +58,9 @@ import java.util.logging.Logger;
 import javax.swing.event.ChangeListener;
 import org.apache.tools.ant.module.AntSettings;
 import org.netbeans.api.annotations.common.NonNull;
+import org.openide.filesystems.FileObject;
+import org.openide.filesystems.FileSystem;
+import org.openide.filesystems.FileUtil;
 import org.openide.modules.InstalledFileLocator;
 import org.openide.modules.ModuleInfo;
 import org.openide.util.ChangeSupport;
@@ -143,7 +148,7 @@ public final class AntBridge {
             }
             if (modules == null) {
                 Collection<? extends ModuleInfo> c = modulesResult.allInstances();
-                modules = c.toArray(new ModuleInfo[c.size()]);
+                modules = c.toArray(new ModuleInfo[0]);
                 for (ModuleInfo module : modules) {
                     module.addPropertyChangeListener(this);
                 }
@@ -154,7 +159,7 @@ public final class AntBridge {
                     enabledModules.add(module);
                 }
             }
-            return enabledModules.toArray(new ModuleInfo[enabledModules.size()]);
+            return enabledModules.toArray(new ModuleInfo[0]);
         }
     }
     private static MiscListener miscListener = new MiscListener();
@@ -216,7 +221,7 @@ public final class AntBridge {
             Map<String,Class> m2 = new HashMap<String,Class>();
             for (Map.Entry<String,Class> entry2 : defs.entrySet()) {
                 String fqn = entry2.getKey();
-                Class clazz = entry2.getValue();
+                Class<?> clazz = entry2.getValue();
                 String name;
                 int idx = fqn.lastIndexOf(':');
                 if (idx != -1) {
@@ -247,7 +252,7 @@ public final class AntBridge {
         return getAntInstance().bridge;
     }
     
-    private synchronized static AntInstance getAntInstance() {
+    private static synchronized AntInstance getAntInstance() {
         AntInstance ai;
         if (antInstance != null) {
             ai = antInstance.get();
@@ -302,7 +307,7 @@ public final class AntBridge {
                 }
             } // in classpath mode, these checks do not apply
             Map<String,ClassLoader> cDCLs = createCustomDefClassLoaders(main);
-            return new AntInstance(classPathToString(mainClassPath), main, bridgeLoader, impl.newInstance(), createCustomDefs(cDCLs), cDCLs);
+            return new AntInstance(classPathToString(mainClassPath), main, bridgeLoader, impl.getDeclaredConstructor().newInstance(), createCustomDefs(cDCLs), cDCLs);
         } catch (Exception e) {
             return fallback(e);
         } catch (LinkageError e) {
@@ -558,7 +563,7 @@ public final class AntBridge {
             String name = entry.getKey();
             String clazzname = entry.getValue();
             try {
-                Class clazz = l.loadClass(clazzname);
+                Class<?> clazz = l.loadClass(clazzname);
                 defs.put(name, clazz);
             } catch (ClassNotFoundException cnfe) {
                 // This is not normal. If the class is mentioned, it should be there.
@@ -757,6 +762,9 @@ public final class AntBridge {
             if (isFromContextClassLoader(name, false)) {
                 return contextClassLoader.getResource(name);
             }
+            if (META_INF_PLATFORM_PROVIDER_REGISTRATION_NAME.equals(name)) {
+                return META_INF_PLATFORM_PROVIDER_REGISTRATION;
+            }
             return super.getResource(name);
         }
 
@@ -767,7 +775,28 @@ public final class AntBridge {
                 final Enumeration<URL> cclRes = contextClassLoader.getResources(name);
                 res = Enumerations.concat(res, cclRes);
             }
+            if (META_INF_PLATFORM_PROVIDER_REGISTRATION_NAME.equals(name)) {
+                res = Enumerations.concat(res, Enumerations.singleton(META_INF_PLATFORM_PROVIDER_REGISTRATION));
+            }
             return res;
+        }
+
+        //need to add JDKPlatformProvider registration into META-INF/services, otherwise it would not be found by javac, and --release would not work:
+        private static final String META_INF_PLATFORM_PROVIDER_REGISTRATION_NAME = "META-INF/services/com.sun.tools.javac.platform.PlatformProvider";
+        private static final FileSystem META_INF_PLATFORM_PROVIDER_FS;
+        private static final URL META_INF_PLATFORM_PROVIDER_REGISTRATION;
+
+        static {
+            try {
+                META_INF_PLATFORM_PROVIDER_FS = FileUtil.createMemoryFileSystem();
+                FileObject file = FileUtil.createData(META_INF_PLATFORM_PROVIDER_FS.getRoot(), META_INF_PLATFORM_PROVIDER_REGISTRATION_NAME);
+                try (OutputStream out = file.getOutputStream()) {
+                    out.write("com.sun.tools.javac.platform.JDKPlatformProvider\n".getBytes(StandardCharsets.UTF_8));
+                }
+                META_INF_PLATFORM_PROVIDER_REGISTRATION = file.toURL();
+            } catch (Throwable t) {
+                throw new IllegalStateException(t);
+            }
         }
 
         private static boolean isFromContextClassLoader(
