@@ -685,7 +685,7 @@ public class QueryBuilderGraphFrame extends JPanel
                     ? criteriaCount+1
                             : Integer.parseInt(order);
                     _inputTableAddCriteria = true;
-                    model.setValueAt(new Integer(orderNum).toString(), row,
+                    model.setValueAt(Integer.valueOf(orderNum).toString(), row,
                             QueryBuilderInputTable.CriteriaOrder_COLUMN);
                     _inputTableAddCriteria = false;
                     if ( orderNum < criteriaCount+1 ) {
@@ -848,7 +848,7 @@ public class QueryBuilderGraphFrame extends JPanel
                 SQLQueryFactory.createTable(tableName, corrName, schemaName);
             JoinTable joinTable=SQLQueryFactory.createJoinTable(tbl);
             
-            List columnNames = new ArrayList();
+            List<String> columnNames = new ArrayList<>();
             columnNames.add("*"); // NOI18N
             
             // Insert the table into the model first, so that column insertions can refer to it
@@ -1582,7 +1582,7 @@ public class QueryBuilderGraphFrame extends JPanel
                         QueryBuilderInputTable.Criteria_Uneditable_String,
                         QueryBuilderInputTable.CriteriaOrder_Uneditable_String);
             } else {
-                String orderString = (order == -1) ? "" : new Integer(order+1).toString();
+                String orderString = (order == -1) ? "" : Integer.valueOf(order+1).toString();
                 
                 // Update the appropriate row, or add a new one
                 _queryBuilderInputTable.addCriterion(tableSpec, columnName,
@@ -2039,7 +2039,7 @@ public class QueryBuilderGraphFrame extends JPanel
         public void select(Widget widget, Point localLocation, boolean invertSelection) {
 
             Object object = _scene.findObject(widget);
-            if ((object != null) && (object instanceof AbstractNode)) {
+            if (object instanceof AbstractNode) {
 		AbstractNode an = (AbstractNode)object;
 		_queryBuilder.setActivatedNodes(new Node[] { an });
                 _scene.userSelectionSuggested(Collections.singleton(object), invertSelection);
