@@ -40,9 +40,8 @@ import java.util.TreeSet;
 import java.util.concurrent.Callable;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import junit.framework.Assert;
+import org.junit.Assert;
 import org.openide.util.Utilities;
-import sun.security.util.SecurityConstants;
 
 /**
  *
@@ -113,7 +112,8 @@ final class CountingSecurityManager extends SecurityManager implements Callable<
 
     static void assertReflection(int maxCount, String whitelist) {
         System.setProperty("counting.reflection.whitelist", whitelist);
-        System.getSecurityManager().checkPermission( SecurityConstants.CHECK_MEMBER_ACCESS_PERMISSION); 
+        RuntimePermission checkMemberAccessPermission = new RuntimePermission("accessDeclaredMembers");
+        System.getSecurityManager().checkPermission(checkMemberAccessPermission);
         System.getProperties().remove("counting.reflection.whitelist");
     }
 
@@ -161,7 +161,7 @@ final class CountingSecurityManager extends SecurityManager implements Callable<
             try {
                 ClassLoader l = Thread.currentThread().getContextClassLoader();
                 Class<?> manClass = Class.forName("org.netbeans.TopSecurityManager", false, l);
-                man = (SecurityManager) manClass.newInstance();
+                man = (SecurityManager) manClass.getDeclaredConstructor().newInstance();
             } catch (Exception ex) {
                 throw new IllegalStateException(ex);
             }
