@@ -328,9 +328,9 @@ public class TestAction extends CallableSystemAction implements Runnable {
                             PaletteItem pitem = items[j].getLookup().lookup(PaletteItem.class);
                             boolean supported = false;
                             try {
-                                Class clazz = pitem.getComponentClass();
+                                Class<?> clazz = pitem.getComponentClass();
                                 if ((clazz != null) && (LookAndFeel.class.isAssignableFrom(clazz))) {
-                                    LookAndFeel laf = (LookAndFeel)clazz.newInstance();
+                                    LookAndFeel laf = (LookAndFeel)clazz.getDeclaredConstructor().newInstance();
                                     supported = laf.isSupportedLookAndFeel();
                                     if (supported && isSynthLAF && !lafName.equals(pitem.getComponentClassName())
                                             && SynthLookAndFeel.class.isAssignableFrom(clazz)) {
