@@ -28,9 +28,6 @@ import com.sun.tools.javac.api.JavacTool;
 import com.sun.tools.javac.comp.AttrContext;
 import com.sun.tools.javac.comp.Env;
 import com.sun.tools.javac.main.JavaCompiler;
-import com.sun.tools.javac.util.Abort;
-
-import org.netbeans.lib.nbjavac.services.CancelAbort;
 import org.netbeans.lib.nbjavac.services.CancelService;
 
 import com.sun.tools.javac.util.Context;
@@ -43,16 +40,16 @@ import java.io.OutputStreamWriter;
 import java.io.PrintWriter;
 import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
-import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.EnumMap;
 import java.util.EnumSet;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
@@ -106,6 +103,7 @@ import org.netbeans.lib.nbjavac.services.NBParserFactory;
 import org.netbeans.lib.nbjavac.services.NBClassWriter;
 import org.netbeans.lib.nbjavac.services.NBJavacTrees;
 import org.netbeans.lib.nbjavac.services.NBLog;
+import org.netbeans.lib.nbjavac.services.NBNames;
 import org.netbeans.lib.nbjavac.services.NBResolve;
 import org.netbeans.lib.nbjavac.services.NBTreeMaker;
 import org.netbeans.modules.java.source.base.SourceLevelUtils;
@@ -113,11 +111,13 @@ import org.netbeans.modules.java.source.indexing.JavaIndex;
 import org.netbeans.modules.java.source.tasklist.CompilerSettings;
 import org.netbeans.modules.java.source.usages.ClassIndexImpl;
 import org.netbeans.modules.java.source.usages.ClasspathInfoAccessor;
+import org.netbeans.modules.java.source.util.AbortChecker;
 import org.netbeans.modules.parsing.api.Snapshot;
 import org.netbeans.modules.parsing.api.Source;
 import org.netbeans.modules.parsing.api.Task;
 import org.netbeans.modules.parsing.api.UserTask;
 import org.netbeans.modules.parsing.impl.Utilities;
+import org.netbeans.modules.parsing.spi.LowMemoryWatcher;
 import org.netbeans.modules.parsing.spi.ParseException;
 import org.netbeans.modules.parsing.spi.Parser;
 import org.netbeans.modules.parsing.spi.ParserResultTask;
@@ -137,6 +137,7 @@ import org.openide.util.lookup.ServiceProvider;
  * @author Tomas Zezula
  */
 //@NotThreadSafe
+@SuppressWarnings("ClassWithMultipleLoggers")
 public class JavacParser extends Parser {
     public static final String OPTION_PATCH_MODULE = "--patch-module";          //NOI18N
     public static final String NB_X_MODULE = "-Xnb-Xmodule:";                   //NOI18N
@@ -153,6 +154,8 @@ public class JavacParser extends Parser {
     //Command line switch disabling partial reparse
     private static final boolean DISABLE_PARTIAL_REPARSE = Boolean.getBoolean("org.netbeans.modules.java.source.parsing.JavacParser.no_reparse");   //NOI18N
     private static final boolean DISABLE_PARAMETER_NAMES_READING = Boolean.getBoolean("org.netbeans.modules.java.source.parsing.JavacParser.no_parameter_names");   //NOI18N
+    private static final Set<Reference<Object>> HUGE_SNAPSHOTS = new HashSet<>();
+    private static final LowMemoryWatcher LOW_MEMORY_WATCHER = LowMemoryWatcher.getInstance();
     public static final String LOMBOK_DETECTED = "lombokDetected";
 
     /**
@@ -170,6 +173,7 @@ public class JavacParser extends Parser {
     private final ChangeSupport listeners = new ChangeSupport(this);
     //Cancelling of parser
     private final AtomicBoolean parserCanceled = new AtomicBoolean();
+    private final AtomicBoolean lowMemoryCancel = new AtomicBoolean();
     //Cancelling of index
     private final AtomicBoolean indexCanceled = new AtomicBoolean();
 
@@ -181,13 +185,13 @@ public class JavacParser extends Parser {
     private FileObject root;
     //ClassPaths used by the parser
     private ClasspathInfo cpInfo;
-    //Count of files the parser was created for
-    private final int sourceCount;
+    //all the files for which parser was created for
+    private final Collection<Snapshot> snapshots;
     //Incremental parsing support
     private final boolean supportsReparse;
     //Incremental parsing support
     private final List<Pair<DocPositionRegion,MethodTree>> positions =
-            Collections.synchronizedList(new LinkedList<Pair<DocPositionRegion,MethodTree>>());
+            Collections.synchronizedList(new LinkedList<>());
     //Incremental parsing support
     private final AtomicReference<Pair<DocPositionRegion,MethodTree>> changedMethod = new AtomicReference<>();
     //J2ME preprocessor support
@@ -209,11 +213,12 @@ public class JavacParser extends Parser {
     private ChangeListener weakCpListener;
     //Current source for parse optmalization of task with no Source (identity)
     private Reference<JavaSource> currentSource;
+    private final boolean perFileProcessing;
 
     JavacParser (final Collection<Snapshot> snapshots, boolean privateParser) {
         this.privateParser = privateParser;
-        this.sourceCount = snapshots.size();
-        final boolean singleJavaFile = this.sourceCount == 1 && MIME_TYPE.equals(snapshots.iterator().next().getSource().getMimeType());
+        this.snapshots = snapshots;
+        final boolean singleJavaFile = this.snapshots.size() == 1 && MIME_TYPE.equals(snapshots.iterator().next().getSource().getMimeType());
         this.supportsReparse = singleJavaFile && !DISABLE_PARTIAL_REPARSE;
         JavaFileFilterImplementation filter = null;
         if (singleJavaFile) {
@@ -225,17 +230,35 @@ public class JavacParser extends Parser {
             }
         }
         this.filterListener = filter != null ? new FilterListener (filter) : null;
-        this.cpInfoListener = new ClasspathInfoListener (
-            listeners,
-            new Runnable() {
-                @Override
-                public void run() {
-                    if (sourceCount == 0) {
+        this.cpInfoListener = new ClasspathInfoListener(
+                listeners,
+                () -> {
+                    if (snapshots.isEmpty()) {
                         invalidate(true);
                     }
-                }
-            });
+                });
         this.sequentialParsing = Lookup.getDefault().lookup(SequentialParsing.class);
+        this.perFileProcessing = perFileProcessing();
+    }
+
+    private boolean perFileProcessing() {
+        if (snapshots.size() <= 1) {
+            return true;
+        }
+
+        boolean result = false;
+
+        for (Iterator<Reference<Object>> it = HUGE_SNAPSHOTS.iterator(); it.hasNext();) {
+            Reference<Object> ref = it.next();
+            Object obj = ref.get();
+            if (obj == null) {
+                it.remove();
+            } else if (obj == snapshots) {
+                result = true;
+            }
+        }
+
+        return result;
     }
 
     private void init (final Snapshot snapshot, final Task task, final boolean singleSource) {
@@ -297,6 +320,7 @@ public class JavacParser extends Parser {
         }
     }
 
+    @SuppressWarnings("NestedAssignment")
     private void init(final Task task) {
         if (!initialized) {
             ClasspathInfo _tmpInfo = null;
@@ -378,6 +402,7 @@ public class JavacParser extends Parser {
         assert privateParser || Utilities.holdsParserLock();
         parseId++;
         parserCanceled.set(false);
+        lowMemoryCancel.set(false);
         indexCanceled.set(false);
         cachedSnapShot = snapshot;
         LOGGER.log(Level.FINE, "parse: task: {0}\n{1}", new Object[]{   //NOI18N
@@ -386,7 +411,7 @@ public class JavacParser extends Parser {
         final CompilationInfoImpl oldInfo = ciImpl;
         boolean success = false;
         try {
-            switch (this.sourceCount) {
+            switch (this.snapshots.size()) {
                 case 0:
                     if (shouldParse(task)) {
                         init(task);
@@ -409,15 +434,38 @@ public class JavacParser extends Parser {
                     }
                     if (needsFullReparse) {
                         positions.clear();
-                        ciImpl = createCurrentInfo (this, file, root, snapshot, null, null);
+                        ciImpl = createCurrentInfo(this, file, root, snapshot, null, null, new HashMap<>(), new HashMap<>(), Collections.singletonMap(file, snapshot));
                         LOGGER.fine("\t:created new javac");                                    //NOI18N
                     }
                     break;
                 default:
-                    init (snapshot, task, false);
+                    init(snapshot, task, false);
+                    DiagnosticListener<JavaFileObject> diagnosticListener;
+                    JavacTaskImpl javacTask;
+                    Map<JavaFileObject, CompilationUnitTree> oldParsedTrees;
+                    Map<FileObject, AbstractSourceFileObject> ide2javacFileObject;
+                    Map<FileObject, Snapshot> file2Snapshot;
+
+                    if (ciImpl != null && !perFileProcessing) {
+                        diagnosticListener = ciImpl.getDiagnosticListener();
+                        javacTask = ciImpl.getJavacTask();
+                        oldParsedTrees = ciImpl.getParsedTrees();
+                        ide2javacFileObject = ciImpl.getIde2javacFileObject();
+                        file2Snapshot = ciImpl.getFileObject2Snapshot();
+                    } else {
+                        diagnosticListener = null;
+                        javacTask = null;
+                        oldParsedTrees = new HashMap<>();
+                        ide2javacFileObject = new HashMap<>();
+                        file2Snapshot = new HashMap<>();
+                        for (Snapshot s : snapshots) {
+                            file2Snapshot.put(s.getSource().getFileObject(), s);
+                        }
+                    }
                     ciImpl = createCurrentInfo(this, file, root, snapshot,
-                        sequentialParsing == null || ciImpl == null ? null : ciImpl.getJavacTask(),
-                        sequentialParsing == null || ciImpl == null ? null : ciImpl.getDiagnosticListener());
+                        javacTask,
+                        diagnosticListener, oldParsedTrees, ide2javacFileObject,
+                        file2Snapshot);
             }
             success = true;
         } finally {
@@ -450,14 +498,14 @@ public class JavacParser extends Parser {
             if (isClasspathInfoProvider) {
                 final ClasspathInfo providedInfo = ((ClasspathInfo.Provider)task).getClasspathInfo();
                 if (providedInfo != null && !providedInfo.equals(cpInfo)) {
-                    if (sourceCount != 0) {
-                        LOGGER.log (Level.FINE, "Task {0} has changed ClasspathInfo form: {1} to:{2}", new Object[]{task, cpInfo, providedInfo}); //NOI18N
+                    if (!snapshots.isEmpty()) {
+                        LOGGER.log(Level.FINE, "Task {0} has changed ClasspathInfo form: {1} to:{2}", new Object[]{task, cpInfo, providedInfo}); //NOI18N
                     }
                     invalidate(true); //Reset initialized, world has changed.
                 }
             }
             if (invalid) {
-                assert cachedSnapShot != null || sourceCount == 0;
+                assert cachedSnapShot != null || snapshots.isEmpty();
                 try {
                     parseImpl(cachedSnapShot, task);
                 } catch (FileObjects.InvalidFileException ife) {
@@ -485,7 +533,7 @@ public class JavacParser extends Parser {
                 cancelService.mayCancel.set(true);
             }
             try {
-                reachedPhase = moveToPhase(requiredPhase, ciImpl, true);
+                reachedPhase = moveToPhase(requiredPhase, ciImpl, Collections.emptyList(), true);
             } catch (IOException ioe) {
                 throw new ParseException ("JavacParser failure", ioe);      //NOI18N
             } finally {
@@ -511,8 +559,9 @@ public class JavacParser extends Parser {
             final NewComilerTask nct = (NewComilerTask)task;
             if (nct.getCompilationController() == null || nct.getTimeStamp() != parseId) {
                 try {
-                    nct.setCompilationController(
-                        JavaSourceAccessor.getINSTANCE().createCompilationController(new CompilationInfoImpl(this, file, root, null, null, cachedSnapShot, true)),
+                    CompilationInfoImpl cii = new CompilationInfoImpl(this, file, root, null, null, cachedSnapShot, true, new HashMap<>(), new HashMap<>());
+                    cii.setParsedTrees(new HashMap<>());
+                    nct.setCompilationController(JavaSourceAccessor.getINSTANCE().createCompilationController(cii),
                         parseId);
                 } catch (IOException ioe) {
                     throw new ParseException ("Javac Failure", ioe);
@@ -528,6 +577,10 @@ public class JavacParser extends Parser {
         if (reason == CancelReason.SOURCE_MODIFICATION_EVENT && event.sourceChanged()) {
             parserCanceled.set(true);
         }
+    }
+
+    public void cancelParse() {
+        parserCanceled.set(true);
     }
 
     public void resultFinished (boolean isCancelable) {
@@ -563,43 +616,72 @@ public class JavacParser extends Parser {
      * Moves the Javac into the required {@link JavaSource#Phase}
      * Not synchronized, has to be called under Parsing API lock.
      * @param the required {@link JavaSource#Phase}
-     * @parma currentInfo - the javac
+     * @param currentInfo - the javac
      * @param cancellable when true the method checks cancels
      * @return the reached phase
      * @throws IOException when the javac throws an exception
      */
-    Phase moveToPhase (final Phase phase, final CompilationInfoImpl currentInfo,
+    @SuppressWarnings("UseSpecificCatch")
+    Phase moveToPhase (final Phase phase, final CompilationInfoImpl currentInfo, List<FileObject> forcedSources,
             final boolean cancellable) throws IOException {
         JavaSource.Phase parserError = currentInfo.parserCrashed;
         assert parserError != null;
         Phase currentPhase = currentInfo.getPhase();
         try {
-            if (currentPhase.compareTo(Phase.PARSED)<0 && phase.compareTo(Phase.PARSED)>=0 && phase.compareTo(parserError)<=0) {
+            if (currentPhase.compareTo(Phase.PARSED) < 0 && phase.compareTo(Phase.PARSED) >= 0 && phase.compareTo(parserError) <= 0) {
                 if (cancellable && parserCanceled.get()) {
                     //Keep the currentPhase unchanged, it may happen that an userActionTask
                     //runnig after the phace completion task may still use it.
                     return Phase.MODIFIED;
                 }
                 long start = System.currentTimeMillis();
-                // XXX - this might be with wrong encoding
                 Iterable<? extends CompilationUnitTree> trees;
-                if (sequentialParsing != null) {
-                    trees = sequentialParsing.parse(currentInfo.getJavacTask(), currentInfo.jfo);
+                Iterator<? extends CompilationUnitTree> it;
+                CompilationUnitTree unit = null;
+                if (currentInfo.getParsedTrees() != null && currentInfo.getParsedTrees().containsKey(currentInfo.jfo)) {
+                    unit = currentInfo.getParsedTrees().get(currentInfo.jfo);
                 } else {
-                    trees = currentInfo.getJavacTask().parse();
+                    if (sequentialParsing != null) {
+                        trees = sequentialParsing.parse(currentInfo.getJavacTask(), currentInfo.jfo);
+                    } else {
+                        List<FileObject> files = new ArrayList<>();
+
+                        if (perFileProcessing) {
+                            files.add(file);
+                        } else {
+                            snapshots.stream()
+                                     .map(s -> s.getSource().getFileObject())
+                                     .forEach(files::add);
+                        }
+
+                        files.addAll(forcedSources);
+
+                        JavacTaskImpl javacTask = currentInfo.getJavacTask(files);
+
+                        trees = javacTask.parse();
+                    }
+                    if (unit == null) {
+                        if (trees == null) {
+                            LOGGER.log(Level.INFO, "Did not parse anything for: {0}", currentInfo.jfo.toUri()); //NOI18N
+                            return Phase.MODIFIED;
+                        }
+                        it = trees.iterator();
+                        if (!it.hasNext()) {
+                            LOGGER.log(Level.INFO, "Did not parse anything for: {0}", currentInfo.jfo.toUri()); //NOI18N
+                            return Phase.MODIFIED;
+                        }
+
+                        while (it.hasNext()) {
+                            CompilationUnitTree oneFileTree = it.next();
+                            currentInfo.getParsedTrees().put(oneFileTree.getSourceFile(), oneFileTree);
+                        }
+                        unit = trees.iterator().next();
+                    }
+
                 }
-                if (trees == null) {
-                    LOGGER.log( Level.INFO, "Did not parse anything for: {0}", currentInfo.jfo.toUri()); //NOI18N
-                    return Phase.MODIFIED;
-                }
-                Iterator<? extends CompilationUnitTree> it = trees.iterator();
-                if (!it.hasNext()) {
-                    LOGGER.log( Level.INFO, "Did not parse anything for: {0}", currentInfo.jfo.toUri()); //NOI18N
-                    return Phase.MODIFIED;
-                }
-                CompilationUnitTree unit = it.next();
+
                 currentInfo.setCompilationUnit(unit);
-                assert !it.hasNext();
+
                 final Document doc = currentInfo.getDocument();
                 if (doc != null && supportsReparse) {
                     final FindMethodRegionsVisitor v = new FindMethodRegionsVisitor(doc,Trees.instance(currentInfo.getJavacTask()).getSourcePositions(),this.parserCanceled, unit);
@@ -674,7 +756,11 @@ public class JavacParser extends Parser {
                 JavaCompiler compiler = JavaCompiler.instance(jti.getContext());
                 List<Env<AttrContext>> savedTodo = new ArrayList<>(compiler.todo);
                 try {
-                    compiler.todo.retainFiles(Collections.singletonList(currentInfo.jfo));
+                    List<FileObject> currentFileObjects = new ArrayList<>();
+                    currentFileObjects.addAll(forcedSources);
+                    currentFileObjects.add(file);
+                    List<AbstractSourceFileObject> currentFiles = currentInfo.getFiles(currentFileObjects);
+                    compiler.todo.retainFiles(currentFiles);
                     savedTodo.removeAll(compiler.todo);
                     PostFlowAnalysis.analyze(jti.analyze(), jti.getContext());
                 } finally {
@@ -689,15 +775,33 @@ public class JavacParser extends Parser {
             if (currentPhase == Phase.RESOLVED && phase.compareTo(Phase.UP_TO_DATE)>=0) {
                 currentPhase = Phase.UP_TO_DATE;
             }
-        } catch (CancelAbort ca) {
-            currentPhase = Phase.MODIFIED;
-            invalidate(false);
-        } catch (Abort abort) {
-            parserError = currentPhase;
-        } catch (RuntimeException | Error ex) {
-            parserError = currentPhase;
-            dumpSource(currentInfo, ex);
-            throw ex;
+        } catch (Throwable ex) {
+            if (AbortChecker.isCancelAbort(ex)) {
+                if (lowMemoryCancel.get()) {
+                    currentInfo.markIncomplete();
+                    HUGE_SNAPSHOTS.add(new WeakReference<>(snapshots));
+                } else {
+                    //real cancel
+                    currentPhase = Phase.MODIFIED;
+                    invalidate(false);
+                }
+            } else if (AbortChecker.isAbort(ex)) {
+                parserError = currentPhase;
+            } else {
+                if (lowMemoryCancel.get()) {
+                    currentInfo.markIncomplete();
+                    HUGE_SNAPSHOTS.add(new WeakReference<>(snapshots));
+                } else {
+                    if (cancellable && parserCanceled.get()) {
+                        currentPhase = Phase.MODIFIED;
+                        invalidate(false);
+                    } else {
+                        parserError = currentPhase;
+                        dumpSource(currentInfo, ex);
+                        throw ex;
+                    }
+                }
+            }
         } finally {
             currentInfo.setPhase(currentPhase);
             currentInfo.parserCrashed = parserError;
@@ -710,18 +814,22 @@ public class JavacParser extends Parser {
             final FileObject root,
             final Snapshot snapshot,
             final JavacTaskImpl javac,
-            final DiagnosticListener<JavaFileObject> diagnosticListener) throws IOException {
-        CompilationInfoImpl info = new CompilationInfoImpl(parser, file, root, javac, diagnosticListener, snapshot, false);
+            final DiagnosticListener<JavaFileObject> diagnosticListener,
+            final Map<JavaFileObject, CompilationUnitTree> parsedTrees,
+            final Map<FileObject, AbstractSourceFileObject> ide2javacFileObject,
+            final Map<FileObject, Snapshot> file2Snapshot) throws IOException {
+        CompilationInfoImpl info = new CompilationInfoImpl(parser, file, root, javac, diagnosticListener, snapshot, false, ide2javacFileObject, file2Snapshot);
         if (file != null) {
             Logger.getLogger("TIMER").log(Level.FINE, "CompilationInfo",    //NOI18N
                     new Object[] {file, info});
         }
+        info.setParsedTrees(parsedTrees);
         return info;
     }
 
     static JavacTaskImpl createJavacTask(
             final FileObject file,
-            final JavaFileObject jfo,
+            final Iterable<? extends JavaFileObject> jfos,
             final FileObject root,
             final ClasspathInfo cpInfo,
             final JavacParser parser,
@@ -742,7 +850,7 @@ public class JavacParser extends Parser {
         }
         final Set<ConfigFlags> flags = EnumSet.noneOf(ConfigFlags.class);
         final Optional<JavacParser> mayBeParser = Optional.ofNullable(parser);
-        if (mayBeParser.filter((p)->p.sourceCount>1).isPresent()) {
+        if (mayBeParser.filter((p) -> p.snapshots.size() > 1).isPresent()) {
             flags.add(ConfigFlags.MULTI_SOURCE);
         }
         if (Optional.ofNullable(mayBeParser.map(p->(p.file))
@@ -789,11 +897,12 @@ public class JavacParser extends Parser {
                     APTUtils.get(root),
                     compilerOptions,
                     additionalModules,
-                    jfo != null ? Arrays.asList(jfo) : Collections.emptyList());
+                    jfos);
             Lookup.getDefault()
                   .lookupAll(TreeLoaderRegistry.class)
                   .stream()
                   .forEach(r -> r.enhance(javacTask.getContext(), cpInfo, detached));
+            ParameterNameProviderImpl.register(javacTask, cpInfo);
             return javacTask;
         }
     }
@@ -848,6 +957,7 @@ public class JavacParser extends Parser {
                 sourceLevel,
                 cpInfo,
                 flags.contains(ConfigFlags.MODULE_INFO));
+        String useRelease = useRelease(sourceLevel, validatedSourceLevel);
         if (lintOptions.length() > 0) {
             options.addAll(Arrays.asList(lintOptions.split(" ")));
         }
@@ -860,8 +970,10 @@ public class JavacParser extends Parser {
             options.add("-XDbackgroundCompilation");    //NOI18N
             options.add("-XDcompilePolicy=byfile");     //NOI18N
             options.add("-XD-Xprefer=source");     //NOI18N
-            options.add("-target");                     //NOI18N
-            options.add(validatedSourceLevel.requiredTarget().name);
+            if (useRelease == null) {
+                options.add("-target");                     //NOI18N
+                options.add(validatedSourceLevel.requiredTarget().name);
+            }
         }
         options.add("-XDide");   // NOI18N, javac runs inside the IDE
         if (!DISABLE_PARAMETER_NAMES_READING) {
@@ -873,8 +985,13 @@ public class JavacParser extends Parser {
         options.add("-g:source"); // NOI18N, Make the compiler to maintian source file info
         options.add("-g:lines"); // NOI18N, Make the compiler to maintain line table
         options.add("-g:vars");  // NOI18N, Make the compiler to maintain local variables table
-        options.add("-source");  // NOI18N
-        options.add(validatedSourceLevel.name);
+        if (useRelease != null) {
+            options.add("--release");  // NOI18N
+            options.add(useRelease);
+        } else {
+            options.add("-source");  // NOI18N
+            options.add(validatedSourceLevel.name);
+        }
         if (sourceProfile != null &&
             sourceProfile != SourceLevelQuery.Profile.DEFAULT) {
             options.add("-profile");    //NOI18N, Limit JRE to required compact profile
@@ -889,6 +1006,7 @@ public class JavacParser extends Parser {
                 hasSourceCache(cpInfo, aptUtils);
         Collection<? extends Processor> processors = null;
         if (aptEnabled) {
+            assert aptUtils != null;
             processors = aptUtils.resolveProcessors(backgroundCompilation);
             if (processors.isEmpty()) {
                 aptEnabled = false;
@@ -902,6 +1020,7 @@ public class JavacParser extends Parser {
             }
         }
         if (aptEnabled) {
+            assert aptUtils != null;
             for (Map.Entry<? extends String, ? extends String> entry : aptUtils.processorOptions().entrySet()) {
                 StringBuilder sb = new StringBuilder();
                 sb.append("-A").append(entry.getKey()); //NOI18N
@@ -910,6 +1029,7 @@ public class JavacParser extends Parser {
                 }
                 options.add(sb.toString());
             }
+            options.add("-proc:full");
         } else {
             options.add("-proc:none"); // NOI18N, Disable annotation processors
         }
@@ -930,7 +1050,8 @@ public class JavacParser extends Parser {
 
         Context context = new Context();
         //need to preregister the Messages here, because the getTask below requires Log instance:
-        NBLog.preRegister(context, DEV_NULL, DEV_NULL, DEV_NULL);
+        NBLog.preRegister(context, DEV_NULL);
+        NBNames.preRegister(context);
         JavacTaskImpl task = (JavacTaskImpl)JavacTool.create().getTask(null,
                 ClasspathInfoAccessor.getINSTANCE().createFileManager(cpInfo, validatedSourceLevel.name),
                 diagnosticListener, options, files.iterator().hasNext() ? null : Arrays.asList("java.lang.Object"), files,
@@ -958,16 +1079,32 @@ public class JavacParser extends Parser {
         NBJavacTrees.preRegister(context);
         if (!backgroundCompilation) {
             JavacFlowListener.preRegister(context, task);
-            NBResolve.preRegister(context);
         }
+        NBResolve.preRegister(context);
         NBEnter.preRegister(context);
         NBMemberEnter.preRegister(context, backgroundCompilation);
-        ParameterNameProviderImpl.register(task, cpInfo);
         TIME_LOGGER.log(Level.FINE, "JavaC", context);
         return task;
     }
 
-    /*test*/
+    private static String useRelease(final String requestedSource, com.sun.tools.javac.code.Source validatedSourceLevel) {
+        if (requestedSource == null || validatedSourceLevel == null) {
+            return null;
+        }
+        com.sun.tools.javac.code.Source sourceLevel = com.sun.tools.javac.code.Source.lookup(requestedSource);
+        if (sourceLevel == null) {
+            return null;
+        }
+        if (validatedSourceLevel.equals(sourceLevel)) {
+            return null;
+        }
+        if (sourceLevel.compareTo(com.sun.tools.javac.code.Source.JDK7) <= 0) {
+            sourceLevel = com.sun.tools.javac.code.Source.JDK7;
+        }
+        return sourceLevel.isSupported() ? sourceLevel.requiredTarget().multiReleaseValue() : null;
+    }
+
+    @SuppressWarnings("PublicField") // test
     public static boolean DISABLE_SOURCE_LEVEL_DOWNGRADE = false;
     static @NonNull com.sun.tools.javac.code.Source validateSourceLevel(
             @NullAllowed String sourceLevel,
@@ -1021,8 +1158,7 @@ public class JavacParser extends Parser {
                         final boolean checkCp = bootClassPath.findResource("java/lang/Object.class") == null;
                         if (!hasResource("java/lang/AssertionError", new ClassPath[] {ClassPath.EMPTY}, new ClassPath[] {checkCp ? classPath : ClassPath.EMPTY}, new ClassPath[] {srcClassPath})) { // NOI18N
                             LOGGER.log(warnLevel,
-                                       "Even though the source level of {0} is set to: {1}, java.lang.AssertionError cannot be found on the bootclasspath: {2}\n" +
-                                       "Changing source level to 1.3",
+                                       "Even though the source level of {0} is set to: {1}, java.lang.AssertionError cannot be found on the bootclasspath: {2}\n", // NOI18N
                                        new Object[]{srcClassPath, sourceLevel, bootClassPath}); //NOI18N
                             return com.sun.tools.javac.code.Source.JDK1_3;
                         }
@@ -1031,33 +1167,36 @@ public class JavacParser extends Parser {
                 if (source.compareTo(SourceLevelUtils.JDK1_5) >= 0 &&
                     !hasResource("java/lang/StringBuilder", new ClassPath[] {bootClassPath}, new ClassPath[] {classPath}, new ClassPath[] {srcClassPath})) { //NOI18N
                     LOGGER.log(warnLevel,
-                               "Even though the source level of {0} is set to: {1}, java.lang.StringBuilder cannot be found on the bootclasspath: {2}\n" +
-                               "Changing source level to 1.4",
+                               "Even though the source level of {0} is set to: {1}, java.lang.StringBuilder cannot be found on the bootclasspath: {2}\n",
                                new Object[]{srcClassPath, sourceLevel, bootClassPath}); //NOI18N
                     return com.sun.tools.javac.code.Source.JDK1_4;
                 }
                 if (source.compareTo(SourceLevelUtils.JDK1_7) >= 0 &&
                     !hasResource("java/lang/AutoCloseable", new ClassPath[] {bootClassPath}, new ClassPath[] {classPath}, new ClassPath[] {srcClassPath})) { //NOI18N
                     LOGGER.log(warnLevel,
-                               "Even though the source level of {0} is set to: {1}, java.lang.AutoCloseable cannot be found on the bootclasspath: {2}\n" +   //NOI18N
-                               "Try with resources is unsupported.",  //NOI18N
+                               "Even though the source level of {0} is set to: {1}, java.lang.AutoCloseable cannot be found on the bootclasspath: {2}\n", //NOI18N
                                new Object[]{srcClassPath, sourceLevel, bootClassPath}); //NOI18N
                 }
                 if (source.compareTo(SourceLevelUtils.JDK1_8) >= 0 &&
                     !hasResource("java/lang/invoke/LambdaMetafactory", new ClassPath[] {bootClassPath}, new ClassPath[] {classPath}, new ClassPath[] {srcClassPath})) { //NOI18N
                     LOGGER.log(warnLevel,
-                               "Even though the source level of {0} is set to: {1}, java.lang.invoke.LambdaMetafactory cannot be found on the bootclasspath: {2}\n" +   //NOI18N
-                               "Changing source level to 1.7",  //NOI18N
+                               "Even though the source level of {0} is set to: {1}, java.lang.invoke.LambdaMetafactory cannot be found on the bootclasspath: {2}\n", //NOI18N
                                new Object[]{srcClassPath, sourceLevel, bootClassPath}); //NOI18N
                     return SourceLevelUtils.JDK1_7;
                 }
                 if (source.compareTo(SourceLevelUtils.JDK1_9) >= 0 &&
                     !hasResource("java/util/zip/CRC32C", new ClassPath[] {moduleBoot}, new ClassPath[] {moduleCompile, moduleAllUnnamed}, new ClassPath[] {srcClassPath})) { //NOI18N
                     LOGGER.log(warnLevel,
-                               "Even though the source level of {0} is set to: {1}, java.util.zip.CRC32C cannot be found on the system module path: {2}\n" +   //NOI18N
-                               "Changing source level to 1.8",  //NOI18N
+                               "Even though the source level of {0} is set to: {1}, java.util.zip.CRC32C cannot be found on the system module path: {2}\n", //NOI18N
                                new Object[]{srcClassPath, sourceLevel, moduleBoot}); //NOI18N
                     return SourceLevelUtils.JDK1_8;
+                }
+                if (source.compareTo(SourceLevelUtils.JDK15) >= 0 &&
+                    !hasResource("java/lang/Record", new ClassPath[] {moduleBoot}, new ClassPath[] {moduleCompile, moduleAllUnnamed}, new ClassPath[] {srcClassPath})) { //NOI18N
+                    LOGGER.log(warnLevel,
+                               "Even though the source level of {0} is set to: {1}, java.lang.Record cannot be found on the system module path: {2}\n", //NOI18N
+                               new Object[]{srcClassPath, sourceLevel, moduleBoot}); //NOI18N
+                    return SourceLevelUtils.JDK14;
                 }
                 return source;
             }
@@ -1074,6 +1213,7 @@ public class JavacParser extends Parser {
     }
 
     @NonNull
+    @SuppressWarnings({"AssignmentToForLoopParameter", "ValueOfIncrementOrDecrementUsed"})
     public static List<? extends String> validateCompilerOptions(@NonNull final List<? extends String> options, @NullAllowed com.sun.tools.javac.code.Source sourceLevel) {
         final List<String> res = new ArrayList<>();
         boolean allowModularOptions = sourceLevel == null || com.sun.tools.javac.code.Source.lookup("9").compareTo(sourceLevel) <= 0;
@@ -1098,6 +1238,10 @@ public class JavacParser extends Parser {
             } else if (option.equals("-parameters") || option.startsWith("-Xlint")) {     //NOI18N
                 res.add(option);
             } else if (option.equals("--enable-preview")) {     //NOI18N
+                res.add(option);
+            } else if (option.equals("-XDrawDiagnostics")) {     //NOI18N
+                res.add(option);
+            } else if (option.startsWith("-A")) {     //NOI18N
                 res.add(option);
             } else if ((
                     option.startsWith("--add-modules") ||   //NOI18N
@@ -1170,25 +1314,15 @@ public class JavacParser extends Parser {
         TIME_LOGGER.log(Level.FINE, message, new Object[] {source, time});
     }
 
-    /**
-     * Dumps the source code to the file. Used for parser debugging. Only a limited number
-     * of dump files is used. If the last file exists, this method doesn't dump anything.
-     *
-     * @param  info  CompilationInfo for which the error occurred.
-     * @param  exc  exception to write to the end of dump file
-     */
-    public static void dumpSource(CompilationInfoImpl info, Throwable exc) {
+    public static File createDumpFile(CompilationInfoImpl info) {
         String userDir = System.getProperty("netbeans.user");
         if (userDir == null) {
-            return;
+            return null;
         }
         String dumpDir =  userDir + "/var/log/"; //NOI18N
-        String src = info.getText();
         FileObject file = info.getFileObject();
-        String fileName = FileUtil.getFileDisplayName(file);
         String origName = file.getName();
         File f = new File(dumpDir + origName + ".dump"); // NOI18N
-        boolean dumpSucceeded = false;
         int i = 1;
         while (i < MAX_DUMPS) {
             if (!f.exists()) {
@@ -1197,10 +1331,27 @@ public class JavacParser extends Parser {
             f = new File(dumpDir + origName + '_' + i + ".dump"); // NOI18N
             i++;
         }
-        if (!f.exists()) {
+        return !f.exists() ? f : null;
+    }
+
+    /**
+     * Dumps the source code to the file. Used for parser debugging. Only a limited number
+     * of dump files is used. If the last file exists, this method doesn't dump anything.
+     *
+     * @param  info  CompilationInfo for which the error occurred.
+     * @param  exc  exception to write to the end of dump file
+     */
+    @SuppressWarnings("LoggerStringConcat")
+    public static void dumpSource(CompilationInfoImpl info, Throwable exc) {
+        String src = info.getText();
+        FileObject file = info.getFileObject();
+        String fileName = FileUtil.getFileDisplayName(file);
+        File f = createDumpFile(info);
+        boolean dumpSucceeded = false;
+        if (f != null) {
             try {
                 OutputStream os = new FileOutputStream(f);
-                try (PrintWriter writer = new PrintWriter(new OutputStreamWriter(os, "UTF-8"))) {   //NOI18N
+                try (PrintWriter writer = new PrintWriter(new OutputStreamWriter(os, StandardCharsets.UTF_8))) {
                     writer.println(src);
                     writer.println("----- Classpath: ---------------------------------------------"); // NOI18N
 
@@ -1222,6 +1373,7 @@ public class JavacParser extends Parser {
             }
         }
         if (dumpSucceeded) {
+            assert f != null;
             try {
                 Throwable t = Exceptions.attachMessage(exc, "An error occurred during parsing of \'" + fileName + "\'. Please report a bug against java/source and attach dump file '"  // NOI18N
                         + f.getAbsolutePath() + "'."); // NOI18N
@@ -1235,7 +1387,7 @@ public class JavacParser extends Parser {
             LOGGER.log(Level.WARNING,
                     "Dump could not be written. Either dump file could not " + // NOI18N
                     "be created or all dump files were already used. Please " + // NOI18N
-                    "check that you have write permission to '" + dumpDir + "' and " + // NOI18N
+                    "check that you have write permission to '" + (f != null ? f.getParent() : "var/log") + "' and " + // NOI18N
                     "clean all *.dump files in that directory."); // NOI18N
         }
     }
@@ -1262,8 +1414,16 @@ public class JavacParser extends Parser {
         }
 
         @Override
+        @SuppressWarnings("AccessingNonPublicFieldOfAnotherObject")
         public boolean isCanceled() {
-            return mayCancel.get() && parser.parserCanceled.get();
+            if (mayCancel.get() && parser.parserCanceled.get()) {
+                return true;
+            }
+            if (!parser.perFileProcessing && LOW_MEMORY_WATCHER.isLowMemory()) {
+                parser.lowMemoryCancel.set(true);
+                return true;
+            }
+            return false;
         }
     }
 
@@ -1346,7 +1506,8 @@ public class JavacParser extends Parser {
             ProcessorHolder instance = ctx.get(ProcessorHolder.class);
 
             if (instance == null) {
-                ctx.put(ProcessorHolder.class, instance = new ProcessorHolder());
+                instance = new ProcessorHolder();
+                ctx.put(ProcessorHolder.class, instance);
             }
 
             return instance;
@@ -1354,10 +1515,12 @@ public class JavacParser extends Parser {
 
         private Collection<? extends Processor> processors;
 
+        @SuppressWarnings("AssignmentToCollectionOrArrayFieldFromParameter")
         public void setProcessors(Collection<? extends Processor> processors) {
             this.processors = processors;
         }
 
+        @SuppressWarnings("ReturnOfCollectionOrArrayField")
         public Collection<? extends Processor> getProcessors() {
             return processors;
         }
