@@ -22,21 +22,18 @@ package org.netbeans.modules.java.hints.spiimpl;
 import com.sun.source.util.TreePath;
 import java.util.ArrayList;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Set;
+import java.util.function.Function;
 import javax.lang.model.type.TypeMirror;
 import org.netbeans.api.java.source.CompilationInfo;
-import org.netbeans.api.java.source.GeneratorUtilities;
 import org.netbeans.api.java.source.JavaSource;
 import org.netbeans.api.java.source.JavaSource.Phase;
+import org.netbeans.api.java.source.ModificationResult;
 import org.netbeans.api.java.source.ModificationResult.Difference;
-import org.netbeans.api.java.source.Task;
 import org.netbeans.api.java.source.WorkingCopy;
-import org.netbeans.api.project.Project;
 import org.netbeans.modules.java.hints.spiimpl.batch.BatchUtilities;
 import org.netbeans.modules.java.source.JavaSourceAccessor;
 import org.netbeans.modules.refactoring.spi.RefactoringElementImplementation;
@@ -60,37 +57,41 @@ public class JavaFixImpl implements Fix {
         this.jf = jf;
     }
 
+    @Override
     public String getText() {
         return Accessor.INSTANCE.getText(jf);
     }
 
+    @Override
     public ChangeInfo implement() throws Exception {
         FileObject file = Accessor.INSTANCE.getFile(jf);
         
-        BatchUtilities.fixDependencies(file, Collections.singletonList(jf), new IdentityHashMap<Project, Set<String>>());
+        BatchUtilities.fixDependencies(file, List.of(jf), new IdentityHashMap<>());
 
         JavaSource js = JavaSource.forFileObject(file);
 
-        js.runModificationTask(new Task<WorkingCopy>() {
-            public void run(WorkingCopy wc) throws Exception {
-                if (wc.toPhase(Phase.RESOLVED).compareTo(Phase.RESOLVED) < 0) {
-                    return;
-                }
-                Map<FileObject, byte[]> resourceContentChanges = new HashMap<FileObject, byte[]>();
-                Accessor.INSTANCE.process(jf, wc, true, resourceContentChanges, /*Ignored in editor:*/new ArrayList<RefactoringElementImplementation>());
-                Map<FileObject, List<Difference>> resourceContentDiffs = new HashMap<FileObject, List<Difference>>();
-                BatchUtilities.addResourceContentChanges(resourceContentChanges, resourceContentDiffs);
-                JavaSourceAccessor.getINSTANCE().createModificationResult(resourceContentDiffs, Collections.<Object, int[]>emptyMap()).commit();
+        ModificationResult result = js.runModificationTask((WorkingCopy wc) -> {
+            if (wc.toPhase(Phase.RESOLVED).compareTo(Phase.RESOLVED) < 0) {
+                return;
             }
-        }).commit();
+            Map<FileObject, byte[]> resourceContentChanges = new HashMap<>();
+            Accessor.INSTANCE.process(jf, wc, true, resourceContentChanges, /*Ignored in editor:*/new ArrayList<>());
+            Map<FileObject, List<Difference>> resourceContentDiffs = new HashMap<>();
+            BatchUtilities.addResourceContentChanges(resourceContentChanges, resourceContentDiffs);
+            JavaSourceAccessor.getINSTANCE().createModificationResult(resourceContentDiffs, Map.of()).commit();
+        });
 
-        return null;
+        result.commit();
+
+        Function<ModificationResult, ChangeInfo> convertor = Accessor.INSTANCE.getChangeInfoConvertor(jf);
+
+        return convertor != null ? convertor.apply(result) : null;
     }
 
     @Override
     public boolean equals(Object obj) {
-        if (obj instanceof JavaFixImpl) {
-            return jf.equals(((JavaFixImpl)obj).jf);
+        if (obj instanceof JavaFixImpl javaFixImpl) {
+            return jf.equals(javaFixImpl.jf);
         }
         return super.equals(obj);
     }
@@ -112,7 +113,7 @@ public class JavaFixImpl implements Fix {
         
     }
     
-    public static abstract class Accessor {
+    public abstract static class Accessor {
 
         static {
             try {
@@ -133,5 +134,7 @@ public class JavaFixImpl implements Fix {
         public abstract Fix createSuppressWarningsFix(CompilationInfo compilationInfo, TreePath treePath, String... keys);
         public abstract List<Fix> createSuppressWarnings(CompilationInfo compilationInfo, TreePath treePath, String... keys);
         public abstract List<Fix> resolveDefaultFixes(HintContext ctx, Fix... provided);
+        public abstract void setChangeInfoConvertor(JavaFix jf, Function<ModificationResult, ChangeInfo> modResult2ChangeInfo);
+        public abstract Function<ModificationResult, ChangeInfo> getChangeInfoConvertor(JavaFix jf);
     }
 }
