@@ -63,7 +63,6 @@ import com.sun.tools.javac.comp.Todo;
 import com.sun.tools.javac.main.JavaCompiler;
 import com.sun.tools.javac.parser.JavacParser;
 import com.sun.tools.javac.parser.Lexer;
-import com.sun.tools.javac.parser.Parser;
 import com.sun.tools.javac.parser.ParserFactory;
 import com.sun.tools.javac.parser.Scanner;
 import com.sun.tools.javac.parser.ScannerFactory;
@@ -74,6 +73,7 @@ import com.sun.tools.javac.tree.JCTree;
 import com.sun.tools.javac.tree.JCTree.JCCase;
 import com.sun.tools.javac.tree.JCTree.JCCatch;
 import com.sun.tools.javac.tree.JCTree.JCCompilationUnit;
+import com.sun.tools.javac.tree.JCTree.JCConstantCaseLabel;
 import com.sun.tools.javac.tree.JCTree.JCExpression;
 import com.sun.tools.javac.tree.JCTree.JCFieldAccess;
 import com.sun.tools.javac.tree.JCTree.JCIdent;
@@ -90,20 +90,17 @@ import java.beans.PropertyChangeEvent;
 import java.beans.PropertyChangeListener;
 import java.io.File;
 import java.io.IOException;
-import java.lang.invoke.MethodHandles;
-import java.lang.invoke.MethodType;
 import java.lang.ref.Reference;
 import java.lang.ref.WeakReference;
-import java.lang.reflect.Method;
 import java.net.URI;
 import java.nio.CharBuffer;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.EnumSet;
 import java.util.HashMap;
 import java.util.HashSet;
-import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Locale;
@@ -111,6 +108,8 @@ import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicBoolean;
+import java.util.stream.Stream;
+import javax.lang.model.SourceVersion;
 import javax.lang.model.element.AnnotationMirror;
 import javax.lang.model.element.AnnotationValue;
 import javax.lang.model.element.AnnotationValueVisitor;
@@ -128,12 +127,6 @@ import javax.tools.Diagnostic;
 import javax.tools.JavaCompiler.CompilationTask;
 import javax.tools.JavaFileObject;
 import javax.tools.SimpleJavaFileObject;
-import net.bytebuddy.ByteBuddy;
-import net.bytebuddy.dynamic.DynamicType.Loaded;
-import net.bytebuddy.dynamic.DynamicType.Unloaded;
-import net.bytebuddy.dynamic.loading.ClassLoadingStrategy;
-import net.bytebuddy.implementation.MethodCall;
-import net.bytebuddy.matcher.ElementMatchers;
 import org.netbeans.api.annotations.common.CheckForNull;
 import org.netbeans.api.annotations.common.NonNull;
 import org.netbeans.api.java.classpath.ClassPath;
@@ -150,7 +143,6 @@ import org.netbeans.modules.java.hints.providers.spi.ClassPathBasedHintProvider;
 import org.netbeans.modules.java.hints.providers.spi.HintDescription;
 import org.netbeans.modules.java.hints.providers.spi.Trigger.PatternDescription;
 import org.netbeans.modules.java.hints.spiimpl.JackpotTrees.CatchWildcard;
-import org.netbeans.modules.java.hints.spiimpl.JackpotTrees.VariableWildcard;
 import org.netbeans.modules.java.source.JavaSourceAccessor;
 import org.netbeans.modules.java.source.builder.TreeFactory;
 import org.netbeans.lib.nbjavac.services.CancelService;
@@ -166,10 +158,22 @@ import org.netbeans.spi.editor.hints.Severity;
 import org.netbeans.spi.java.classpath.support.ClassPathSupport;
 import org.openide.filesystems.FileObject;
 import org.openide.filesystems.FileUtil;
+import org.openide.modules.SpecificationVersion;
 import org.openide.util.Lookup;
 import org.openide.util.NbCollections;
 import org.openide.util.WeakListeners;
 import org.openide.util.lookup.ServiceProvider;
+
+import static com.sun.source.tree.CaseTree.CaseKind.STATEMENT;
+import org.netbeans.api.annotations.common.NullAllowed;
+import org.netbeans.modules.java.hints.providers.spi.HintMetadata;
+import org.netbeans.modules.refactoring.spi.ui.RefactoringUI;
+import org.netbeans.modules.refactoring.spi.ui.UI;
+import org.openide.DialogDisplayer;
+import org.openide.NotifyDescriptor;
+import org.openide.util.NbBundle;
+import org.openide.util.Parameters;
+import org.openide.windows.TopComponent;
 
 /**
  *
@@ -194,12 +198,8 @@ public class Utilities {
     private static final String SWITCH_EXPRESSION = "SWITCH_EXPRESSION";
     
 
-    public static <E> Iterable<E> checkedIterableByFilter(final Iterable raw, final Class<E> type, final boolean strict) {
-        return new Iterable<E>() {
-            public Iterator<E> iterator() {
-                return NbCollections.checkedIteratorByFilter(raw.iterator(), type, strict);
-            }
-        };
+    public static <E> Iterable<E> checkedIterableByFilter(final Iterable<?> raw, final Class<E> type, final boolean strict) {
+        return () -> NbCollections.checkedIteratorByFilter(raw.iterator(), type, strict);
     }
     
 //    public static AnnotationTree constructConstraint(WorkingCopy wc, String name, TypeMirror tm) {
@@ -236,7 +236,7 @@ public class Utilities {
 
     public static List<AnnotationTree> findArrayValue(AnnotationTree at, String name) {
         ExpressionTree fixesArray = findValue(at, name);
-        List<AnnotationTree> fixes = new LinkedList<AnnotationTree>();
+        List<AnnotationTree> fixes = new LinkedList<>();
 
         if (fixesArray != null && fixesArray.getKind() == Kind.NEW_ARRAY) {
             NewArrayTree trees = (NewArrayTree) fixesArray;
@@ -256,29 +256,24 @@ public class Utilities {
     }
 
     public static boolean isPureMemberSelect(Tree mst, boolean allowVariables) {
-        switch (mst.getKind()) {
-            case IDENTIFIER: return allowVariables || ((IdentifierTree) mst).getName().charAt(0) != '$';
-            case MEMBER_SELECT: return isPureMemberSelect(((MemberSelectTree) mst).getExpression(), allowVariables);
-            default: return false;
-        }
+        return switch (mst.getKind()) {
+            case IDENTIFIER -> allowVariables || ((IdentifierTree) mst).getName().charAt(0) != '$';
+            case MEMBER_SELECT -> isPureMemberSelect(((MemberSelectTree) mst).getExpression(), allowVariables);
+            default -> false;
+        };
     }
 
     public static Map<String, Collection<HintDescription>> sortOutHints(Iterable<? extends HintDescription> hints, Map<String, Collection<HintDescription>> output) {
         for (HintDescription d : hints) {
-            Collection<HintDescription> h = output.get(d.getMetadata().displayName);
-
-            if (h == null) {
-                output.put(d.getMetadata().displayName, h = new LinkedList<HintDescription>());
-            }
-
-            h.add(d);
+            output.computeIfAbsent(d.getMetadata().displayName, k -> new LinkedList<>())
+                  .add(d);
         }
 
         return output;
     }
 
     public static List<HintDescription> listAllHints(Set<ClassPath> cps) {
-        List<HintDescription> result = new LinkedList<HintDescription>();
+        List<HintDescription> result = new LinkedList<>();
 
         for (Collection<? extends HintDescription> hints : RulesManager.getInstance().readHints(null, cps, new AtomicBoolean()).values()) {
             for (HintDescription hd : hints) {
@@ -287,14 +282,14 @@ public class Utilities {
             }
         }
 
-        result.addAll(listClassPathHints(Collections.<ClassPath>emptySet(), cps));
+        result.addAll(listClassPathHints(Set.of(), cps));
 
         return result;
     }
 
     public static List<HintDescription> listClassPathHints(Set<ClassPath> sourceCPs, Set<ClassPath> binaryCPs) {
-        List<HintDescription> result = new LinkedList<HintDescription>();
-        Set<FileObject> roots = new HashSet<FileObject>();
+        List<HintDescription> result = new LinkedList<>();
+        Set<FileObject> roots = new HashSet<>();
 
         for (ClassPath cp : binaryCPs) {
             for (FileObject r : cp.getRoots()) {
@@ -308,11 +303,11 @@ public class Utilities {
             }
         }
 
-        Set<ClassPath> cps = new HashSet<ClassPath>(sourceCPs);
+        Set<ClassPath> cps = new HashSet<>(sourceCPs);
 
-        cps.add(ClassPathSupport.createClassPath(roots.toArray(new FileObject[0])));
+        cps.add(ClassPathSupport.createClassPath(roots.toArray(FileObject[]::new)));
 
-        ClassPath cp = ClassPathSupport.createProxyClassPath(cps.toArray(new ClassPath[0]));
+        ClassPath cp = ClassPathSupport.createProxyClassPath(cps.toArray(ClassPath[]::new));
 
         for (ClassPathBasedHintProvider p : Lookup.getDefault().lookupAll(ClassPathBasedHintProvider.class)) {
             result.addAll(p.computeHints(cp, new AtomicBoolean()));
@@ -349,11 +344,12 @@ public class Utilities {
         return parseAndAttribute(info, jti, pattern, scope, new SourcePositions[1], errors);
     }
 
+    @SuppressWarnings("NestedAssignment")
     private static Tree parseAndAttribute(CompilationInfo info, JavacTaskImpl jti, String pattern, Scope scope, SourcePositions[] sourcePositions, Collection<Diagnostic<? extends JavaFileObject>> errors) {
         Context c = jti.getContext();
         JavaCompiler.instance(c); //force reasonable initialization order
         TreeFactory make = TreeFactory.instance(c);
-        List<Diagnostic<? extends JavaFileObject>> patternTreeErrors = new LinkedList<Diagnostic<? extends JavaFileObject>>();
+        List<Diagnostic<? extends JavaFileObject>> patternTreeErrors = new LinkedList<>();
         Tree toAttribute;
         Tree patternTree = toAttribute = !isStatement(pattern) ? parseExpression(c, pattern, true, sourcePositions, patternTreeErrors) : null;
         int offset = 0;
@@ -361,7 +357,7 @@ public class Utilities {
         boolean classMember = false;
 
         if (pattern.startsWith("case ")) {//XXX: should be a lexer token
-            List<Diagnostic<? extends JavaFileObject>> currentPatternTreeErrors = new LinkedList<Diagnostic<? extends JavaFileObject>>();
+            List<Diagnostic<? extends JavaFileObject>> currentPatternTreeErrors = new LinkedList<>();
             Tree switchTree = parseStatement(c, "switch ($$foo) {" + pattern + "}", sourcePositions, currentPatternTreeErrors);
 
             offset = "switch ($$foo) {".length();
@@ -372,7 +368,7 @@ public class Utilities {
 
         if (patternTree == null || isErrorTree(patternTree) || SWITCH_EXPRESSION.equals(patternTree.getKind().name())) {
             SourcePositions[] currentPatternTreePositions = new SourcePositions[1];
-            List<Diagnostic<? extends JavaFileObject>> currentPatternTreeErrors = new LinkedList<Diagnostic<? extends JavaFileObject>>();
+            List<Diagnostic<? extends JavaFileObject>> currentPatternTreeErrors = new LinkedList<>();
             Tree currentPatternTree = parseStatement(c, "{" + pattern + "}", currentPatternTreePositions, currentPatternTreeErrors);
 
             assert currentPatternTree.getKind() == Kind.BLOCK : currentPatternTree.getKind();
@@ -398,7 +394,7 @@ public class Utilities {
             if (!currentPatternTreeErrors.isEmpty() || containsError(currentPatternTree)) {
                 //maybe a class member?
                 SourcePositions[] classPatternTreePositions = new SourcePositions[1];
-                List<Diagnostic<? extends JavaFileObject>> classPatternTreeErrors = new LinkedList<Diagnostic<? extends JavaFileObject>>();
+                List<Diagnostic<? extends JavaFileObject>> classPatternTreeErrors = new LinkedList<>();
                 Tree classPatternTree = parseExpression(c, "new Object() {" + pattern + "}", false, classPatternTreePositions, classPatternTreeErrors);
 
                 if (!containsError(classPatternTree)) {
@@ -438,7 +434,7 @@ public class Utilities {
                 //maybe type?
                 if (Utilities.isPureMemberSelect(patternTree, false)) {
                     SourcePositions[] varPositions = new SourcePositions[1];
-                    List<Diagnostic<? extends JavaFileObject>> varErrors = new LinkedList<Diagnostic<? extends JavaFileObject>>();
+                    List<Diagnostic<? extends JavaFileObject>> varErrors = new LinkedList<>();
                     Tree var = parseExpression(c, pattern + ".Class.class;", false, varPositions, varErrors);
 
                     attributeTree(jti, var, scope, varErrors);
@@ -455,7 +451,7 @@ public class Utilities {
                             Element currentElement = trees.getElement(getCurrentPath());
 
                             if (!isError(currentElement)) {
-                                if (currentElement.getKind() == ElementKind.PACKAGE && el.getPackageElement(node.toString()) == null) {
+                                if (currentElement.getKind() == ElementKind.PACKAGE && el.getAllPackageElements(node.toString()).isEmpty()) {
                                     ((JCFieldAccess) node).sym = symtab.errSymbol;
                                     ((JCFieldAccess) node).type = symtab.errType;
                                 } else {
@@ -470,7 +466,7 @@ public class Utilities {
                             Element currentElement = trees.getElement(getCurrentPath());
 
                             if (!isError(currentElement)) {
-                                if (currentElement.getKind() == ElementKind.PACKAGE && el.getPackageElement(node.toString()) == null) {
+                                if (currentElement.getKind() == ElementKind.PACKAGE && el.getAllPackageElements(node.toString()).isEmpty()) {
                                     ((JCIdent) node).sym = symtab.errSymbol;
                                     ((JCIdent) node).type = symtab.errType;
                                 } else {
@@ -500,12 +496,12 @@ public class Utilities {
 
             if (members.size() > 1 + syntheticOffset) {
                 ModifiersTree mt = make.Modifiers(EnumSet.noneOf(Modifier.class));
-                List<Tree> newMembers = new LinkedList<Tree>();
+                List<Tree> newMembers = new LinkedList<>();
 
                 newMembers.add(make.ExpressionStatement(make.Identifier("$$1$")));
                 newMembers.addAll(members.subList(syntheticOffset, members.size()));
 
-                patternTree = make.Class(mt, "$", Collections.<TypeParameterTree>emptyList(), null, Collections.<Tree>emptyList(), newMembers);
+                patternTree = make.Class(mt, "$", List.of(), null, List.of(), newMembers);
             } else {
                 patternTree = members.get(0 + syntheticOffset);
             }
@@ -547,13 +543,14 @@ public class Utilities {
     }
 
     private static boolean isStatement(String pattern) {
-        return pattern.trim().endsWith(";");
+        return pattern.stripTrailing().endsWith(";");
     }
 
     private static boolean isErrorTree(Tree t) {
         return t.getKind() == Kind.ERRONEOUS || (t.getKind() == Kind.IDENTIFIER && ((IdentifierTree) t).getName().contentEquals("<error>")); //TODO: <error>...
     }
     
+    @SuppressWarnings({"BoxedValueEquality"})
     private static boolean containsError(Tree t) {
         return new ErrorAwareTreeScanner<Boolean, Void>() {
             @Override
@@ -561,7 +558,7 @@ public class Utilities {
                 if (node != null && isErrorTree(node)) {
                     return true;
                 }
-                return super.scan(node, p) ==Boolean.TRUE;
+                return super.scan(node, p) == Boolean.TRUE;
             }
             @Override
             public Boolean reduce(Boolean r1, Boolean r2) {
@@ -583,16 +580,14 @@ public class Utilities {
         };
         try {
             CharBuffer buf = CharBuffer.wrap((stmt+"\u0000").toCharArray(), 0, stmt.length());
-            ParserFactory factory = ParserFactory.instance(context);
+            NBParserFactory factory = (NBParserFactory) ParserFactory.instance(context);
             ScannerFactory scannerFactory = ScannerFactory.instance(context);
             Names names = Names.instance(context);
-            Parser parser = newParser(context, (NBParserFactory) factory, scannerFactory.newScanner(buf, false), false, false, CancelService.instance(context), names);
-            if (parser instanceof JavacParser) {
-                if (pos != null)
-                    pos[0] = new ParserSourcePositions((JavacParser)parser);
-                return parser.parseStatement();
+            JavacParser parser = new JackpotJavacParser(context, factory, scannerFactory.newScanner(buf, false), false, false, CancelService.instance(context), names);
+            if (pos != null) {
+                pos[0] = new ParserSourcePositions(parser);
             }
-            return null;
+            return parser.parseStatement();
         } finally {
             compiler.log.useSource(prev);
             compiler.log.popDiagnosticHandler(discardHandler);
@@ -612,19 +607,18 @@ public class Utilities {
         };
         try {
             CharBuffer buf = CharBuffer.wrap((expr+"\u0000").toCharArray(), 0, expr.length());
-            ParserFactory factory = ParserFactory.instance(context);
+            NBParserFactory factory = (NBParserFactory) ParserFactory.instance(context);
             ScannerFactory scannerFactory = ScannerFactory.instance(context);
             Names names = Names.instance(context);
             Scanner scanner = scannerFactory.newScanner(buf, false);
-            Parser parser = newParser(context, (NBParserFactory) factory, scanner, false, false, CancelService.instance(context), names);
-            if (parser instanceof JavacParser) {
-                if (pos != null)
-                    pos[0] = new ParserSourcePositions((JavacParser)parser);
-                JCExpression result = parser.parseExpression();
+            JavacParser parser = new JackpotJavacParser(context, factory, scanner, false, false, CancelService.instance(context), names);
+            if (pos != null) {
+                pos[0] = new ParserSourcePositions(parser);
+            }
+            JCExpression result = parser.parseExpression();
 
-                if (!onlyFullInput || scanner.token().kind == TokenKind.EOF) {
-                    return result;
-                }
+            if (!onlyFullInput || scanner.token().kind == TokenKind.EOF) {
+                return result;
             }
             return null;
         } finally {
@@ -703,7 +697,7 @@ public class Utilities {
     private static long inc;
 
     public static Scope constructScope(CompilationInfo info, Map<String, TypeMirror> constraints) {
-        return constructScope(info, constraints, Collections.<String>emptyList());
+        return constructScope(info, constraints, List.of());
     }
 
     public static Scope constructScope(CompilationInfo info, Map<String, TypeMirror> constraints, Iterable<? extends String> auxiliaryImports) {
@@ -774,7 +768,7 @@ public class Utilities {
             compiler.enterTrees(com.sun.tools.javac.util.List.of(cut));
 
             Todo todo = compiler.todo;
-            ListBuffer<Env<AttrContext>> defer = new ListBuffer<Env<AttrContext>>();
+            ListBuffer<Env<AttrContext>> defer = new ListBuffer<>();
             
             while (todo.peek() != null) {
                 Env<AttrContext> env = todo.remove();
@@ -820,42 +814,7 @@ public class Utilities {
 
     }
 
-    private static final class ScopeDescription {
-        private final Map<String, TypeMirror> constraints;
-        private final Iterable<? extends String> auxiliaryImports;
-
-        public ScopeDescription(Map<String, TypeMirror> constraints, Iterable<? extends String> auxiliaryImports) {
-            this.constraints = constraints;
-            this.auxiliaryImports = auxiliaryImports;
-        }
-
-        @Override
-        public boolean equals(Object obj) {
-            if (obj == null) {
-                return false;
-            }
-            if (getClass() != obj.getClass()) {
-                return false;
-            }
-            final ScopeDescription other = (ScopeDescription) obj;
-            if (this.constraints != other.constraints && (this.constraints == null || !this.constraints.equals(other.constraints))) {
-                return false;
-            }
-            if (this.auxiliaryImports != other.auxiliaryImports && (this.auxiliaryImports == null || !this.auxiliaryImports.equals(other.auxiliaryImports))) {
-                return false;
-            }
-            return true;
-        }
-
-        @Override
-        public int hashCode() {
-            int hash = 7;
-            hash = 47 * hash + (this.constraints != null ? this.constraints.hashCode() : 0);
-            hash = 47 * hash + (this.auxiliaryImports != null ? this.auxiliaryImports.hashCode() : 0);
-            return hash;
-        }
-
-    }
+    private record ScopeDescription(Map<String, TypeMirror> constraints, Iterable<? extends String> auxiliaryImports) {}
 
 //    private static Scope constructScope2(CompilationInfo info, Map<String, TypeMirror> constraints) {
 //        JavacScope s = (JavacScope) info.getTrees().getScope(new TreePath(info.getCompilationUnit()));
@@ -901,21 +860,15 @@ public class Utilities {
 
     public static Set<? extends String> findSuppressedWarnings(CompilationInfo info, TreePath path) {
         //TODO: cache?
-        Set<String> keys = new HashSet<String>();
+        Set<String> keys = new HashSet<>();
 
         while (path != null) {
             Tree leaf = path.getLeaf();
 
             switch (leaf.getKind()) {
-                case METHOD:
-                    handleSuppressWarnings(info, path, ((MethodTree) leaf).getModifiers(), keys);
-                    break;
-                case CLASS:
-                    handleSuppressWarnings(info, path, ((ClassTree) leaf).getModifiers(), keys);
-                    break;
-                case VARIABLE:
-                    handleSuppressWarnings(info, path, ((VariableTree) leaf).getModifiers(), keys);
-                    break;
+                case METHOD -> handleSuppressWarnings(info, path, ((MethodTree) leaf).getModifiers(), keys);
+                case CLASS -> handleSuppressWarnings(info, path, ((ClassTree) leaf).getModifiers(), keys);
+                case VARIABLE -> handleSuppressWarnings(info, path, ((VariableTree) leaf).getModifiers(), keys);
             }
 
             path = path.getParentPath();
@@ -943,57 +896,73 @@ public class Utilities {
                     continue;
 
                 e.getValue().accept(new AnnotationValueVisitor<Void, Void>() {
+                    @Override
                     public Void visit(AnnotationValue av, Void p) {
                         av.accept(this, p);
                         return null;
                     }
+                    @Override
                     public Void visit(AnnotationValue av) {
                         av.accept(this, null);
                         return null;
                     }
+                    @Override
                     public Void visitBoolean(boolean b, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitByte(byte b, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitChar(char c, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitDouble(double d, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitFloat(float f, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitInt(int i, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitLong(long i, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitShort(short s, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitString(String s, Void p) {
                         keys.add(s);
                         return null;
                     }
+                    @Override
                     public Void visitType(TypeMirror t, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitEnumConstant(VariableElement c, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitAnnotation(AnnotationMirror a, Void p) {
                         return null;
                     }
+                    @Override
                     public Void visitArray(List<? extends AnnotationValue> vals, Void p) {
                         for (AnnotationValue av : vals) {
                             av.accept(this, p);
                         }
                         return null;
                     }
+                    @Override
                     public Void visitUnknown(AnnotationValue av, Void p) {
                         return null;
                     }
@@ -1030,7 +999,7 @@ public class Utilities {
 
         assert translated.getKind() == Kind.BLOCK;
 
-        List<StatementTree> newStatements = new LinkedList<StatementTree>();
+        List<StatementTree> newStatements = new LinkedList<>();
         BlockTree block = (BlockTree) translated;
 
         if (firstStatement != lastStatement) {
@@ -1061,6 +1030,7 @@ public class Utilities {
         // @GuardedBy(this)
         private PropertyChangeListener weakL;
 
+        @Override
         public synchronized ClasspathInfo createUniversalCPInfo() {
             Reference<ClasspathInfo> r = cached;
             if (r != null) {
@@ -1069,21 +1039,22 @@ public class Utilities {
                     return c;
                 }
             }
-            JavaPlatform select = JavaPlatform.getDefault();
+
             final JavaPlatformManager man = JavaPlatformManager.getDefault();
-            if (select.getSpecification().getVersion() != null) {
-                for (JavaPlatform p : JavaPlatformManager.getDefault().getInstalledPlatforms()) {
-                    if (!"j2se".equals(p.getSpecification().getName()) || p.getSpecification().getVersion() == null) continue;
-                    if (p.getSpecification().getVersion().compareTo(select.getSpecification().getVersion()) > 0) {
-                        select = p;
-                    }
-                }
-            }
+            final SpecificationVersion maxVersion = new SpecificationVersion(SourceVersion.latest().ordinal()+".99"); // cap at feature version of nb-javac
+            JavaPlatform select = Stream.of(man.getInstalledPlatforms())
+                    .filter(JavaPlatform::isValid)
+                    .filter((p) -> "j2se".equals(p.getSpecification().getName()))
+                    .filter((p) -> p.getSpecification().getVersion() != null)
+                    .filter((p) -> p.getSpecification().getVersion().compareTo(maxVersion) < 0)
+                    .max(Comparator.comparing((p) -> p.getSpecification().getVersion()))
+                    .orElse(JavaPlatform.getDefault());
+
             final ClasspathInfo result = new ClasspathInfo.Builder(select.getBootstrapLibraries())
                                                           .setModuleBootPath(select.getBootstrapLibraries())
                                                           .build();
             if (cached != null) {
-                    this.cached = new WeakReference<>(result);
+                cached = new WeakReference<>(result);
             }
             if (weakL == null) {
                 man.addPropertyChangeListener(weakL = WeakListeners.propertyChange(this, man));
@@ -1099,8 +1070,8 @@ public class Utilities {
     
     private static final class GeneralizePattern extends ErrorAwareTreePathScanner<Void, Void> {
 
-        public final Map<Tree, Tree> tree2Variable = new HashMap<Tree, Tree>();
-        private final Map<Element, String> element2Variable = new HashMap<Element, String>();
+        public final Map<Tree, Tree> tree2Variable = new HashMap<>();
+        private final Map<Element, String> element2Variable = new HashMap<>();
         private final Trees javacTrees;
         private final TreeFactory make;
 
@@ -1125,15 +1096,10 @@ public class Utilities {
             if (el.getModifiers().contains(Modifier.PRIVATE)) {
                 return true;
             }
-
-            switch (el.getKind()) {
-                case LOCAL_VARIABLE:
-                case EXCEPTION_PARAMETER:
-                case PARAMETER:
-                    return true;
-            }
-
-            return false;
+            return switch (el.getKind()) {
+                case LOCAL_VARIABLE, EXCEPTION_PARAMETER, PARAMETER -> true;
+                default -> false;
+            };
         }
 
         @Override
@@ -1168,7 +1134,7 @@ public class Utilities {
                 return null;
             }
 
-            NewClassTree nue = make.NewClass(node.getEnclosingExpression(), Collections.<ExpressionTree>singletonList(make.Identifier("$" + currentVariableIndex++ + "$")), make.Identifier("$" + currentVariableIndex++), Collections.<ExpressionTree>singletonList(make.Identifier("$" + currentVariableIndex++ + "$")), null);
+            NewClassTree nue = make.NewClass(node.getEnclosingExpression(), List.of(make.Identifier("$" + currentVariableIndex++ + "$")), make.Identifier("$" + currentVariableIndex++), List.of(make.Identifier("$" + currentVariableIndex++ + "$")), null);
 
             tree2Variable.put(node, nue);
 
@@ -1227,7 +1193,7 @@ public class Utilities {
 
         @Override
         public Set<? extends Element> getImports() {
-            return Collections.emptySet();
+            return Set.of();
         }
 
         @Override
@@ -1276,45 +1242,6 @@ public class Utilities {
         return true;
     }
 
-    private static Class<?> parserClass;
-    private static synchronized Parser newParser(Context ctx, NBParserFactory fac,
-                                                 Lexer S, boolean keepDocComments,
-                                                 boolean keepLineMap, CancelService cancelService,
-                                                 Names names) {
-        try {
-            if (parserClass == null) {
-                Method switchBlockStatementGroup = JavacParser.class.getDeclaredMethod("switchBlockStatementGroup");
-                Method delegate;
-                if (switchBlockStatementGroup.getReturnType().equals(com.sun.tools.javac.util.List.class)) {
-                    delegate = JackpotJavacParser.class.getDeclaredMethod("switchBlockStatementGroupListImpl");
-                } else {
-                    delegate = JackpotJavacParser.class.getDeclaredMethod("switchBlockStatementGroupImpl");
-                }
-                parserClass = load(new ByteBuddy()
-                                    .subclass(JackpotJavacParser.class)
-                                    .method(ElementMatchers.named("switchBlockStatementGroup")).intercept(MethodCall.invoke(delegate))
-                                    .make())
-                            .getLoaded();
-            }
-            return (Parser) parserClass.getConstructor(Context.class, NBParserFactory.class, Lexer.class, boolean.class, boolean.class, CancelService.class, Names.class)
-                    .newInstance(ctx, fac, S, keepDocComments, keepLineMap, cancelService, names);
-        } catch (ReflectiveOperationException ex) {
-            throw new IllegalStateException(ex);
-        }
-    }
-
-    static <T> Loaded<T> load(Unloaded<T> unloaded) {
-        ClassLoadingStrategy<ClassLoader> strategy;
-
-        try {
-            strategy = ClassLoadingStrategy.UsingLookup.of(MethodHandles.lookup());
-        } catch (IllegalStateException ex) {
-            strategy = new ClassLoadingStrategy.ForUnsafeInjection();
-        }
-
-        return unloaded.load(JackpotTrees.class.getClassLoader(), strategy);
-    }
-
     private static class JackpotJavacParser extends NBJavacParser {
 
         private final Context ctx;
@@ -1353,8 +1280,9 @@ public class Utilities {
             return super.modifiersOpt(partial);
         }
 
+
         @Override
-        public JCVariableDecl formalParameter(boolean lambdaParam) {
+        public JCVariableDecl formalParameter(boolean lambdaParam, boolean recordComponents) {
             if (token.kind == TokenKind.IDENTIFIER) {
                 if (token.name().startsWith(dollar)) {
                     com.sun.tools.javac.util.Name name = token.name();
@@ -1363,12 +1291,11 @@ public class Utilities {
 
                     if (peeked.kind == TokenKind.COMMA || peeked.kind == TokenKind.RPAREN) {
                         nextToken();
-                        return new VariableWildcard(ctx, name, F.Ident(name));
+                        return JackpotTrees.createVariableWildcard(ctx, name);
                     }
                 }
             }
-
-            return super.formalParameter(lambdaParam);
+            return super.formalParameter(lambdaParam, recordComponents);
         }
 
         @Override
@@ -1381,7 +1308,7 @@ public class Utilities {
 
                     if (peeked.kind == TokenKind.COMMA || peeked.kind == TokenKind.RPAREN) {
                         nextToken();
-                        return new VariableWildcard(ctx, name, F.Ident(name));
+                        return JackpotTrees.createVariableWildcard(ctx, name);
                     }
                 }
             }
@@ -1409,9 +1336,10 @@ public class Utilities {
             }
             return super.catchClause();
         }
-
+        
         @Override
-        public com.sun.tools.javac.util.List<JCTree> classOrInterfaceBodyDeclaration(com.sun.tools.javac.util.Name className, boolean isInterface) {
+        public com.sun.tools.javac.util.List<JCTree> classOrInterfaceOrRecordBodyDeclaration(JCModifiers mods, com.sun.tools.javac.util.Name className, boolean isInterface, boolean isRecord) {
+
             if (token.kind == TokenKind.IDENTIFIER) {
                 if (token.name().startsWith(dollar)) {
                     com.sun.tools.javac.util.Name name = token.name();
@@ -1421,12 +1349,13 @@ public class Utilities {
                     if (peeked.kind == TokenKind.SEMI) {
                         nextToken();
                         nextToken();
-                        
+
                         return com.sun.tools.javac.util.List.<JCTree>of(F.Ident(name));
                     }
                 }
             }
-            return super.classOrInterfaceBodyDeclaration(className, isInterface);
+
+            return super.classOrInterfaceOrRecordBodyDeclaration(mods, className, isInterface, isRecord);
         }
         
         @Override
@@ -1439,38 +1368,8 @@ public class Utilities {
             return super.checkExprStat(t);
         }
 
-        protected JCCase switchBlockStatementGroupImpl() throws Throwable {
-            if (token.kind == TokenKind.CASE) {
-                Token peeked = S.token(1);
-
-                if (peeked.kind == TokenKind.IDENTIFIER) {
-                    String ident = peeked.name().toString();
-
-                    if (ident.startsWith("$") && ident.endsWith("$")) {
-                        nextToken();
-                        
-                        int pos = token.pos;
-                        com.sun.tools.javac.util.Name name = token.name();
-
-                        nextToken();
-
-                        if (token.kind == TokenKind.SEMI) {
-                            nextToken();
-                        }
-
-                        JCIdent identTree = F.at(pos).Ident(name);
-
-                        return JackpotTrees.createInstance(ctx, JCCase.class, name, identTree, new Class[] {JCExpression.class, com.sun.tools.javac.util.List.class}, new Object[] {identTree, com.sun.tools.javac.util.List.nil()});
-                    }
-                }
-            }
-
-            return (JCCase) MethodHandles.lookup()
-                                         .findSpecial(NBJavacParser.class, "switchBlockStatementGroup", MethodType.methodType(JCCase.class), JackpotJavacParser.class)
-                                         .invoke(this);
-        }
-
-        protected com.sun.tools.javac.util.List<JCCase> switchBlockStatementGroupListImpl() throws Throwable {
+        @Override
+        protected com.sun.tools.javac.util.List<JCCase> switchBlockStatementGroup() {
             if (token.kind == TokenKind.CASE) {
                 Token peeked = S.token(1);
 
@@ -1489,16 +1388,15 @@ public class Utilities {
                             nextToken();
                         }
 
-                        Class caseKind = Class.forName("com.sun.source.tree.CaseTree$CaseKind", false, JCCase.class.getClassLoader());
                         JCIdent identTree = F.at(pos).Ident(name);
-                        return com.sun.tools.javac.util.List.of(JackpotTrees.createInstance(ctx, JCCase.class, name, identTree, new Class[] {caseKind, com.sun.tools.javac.util.List.class, com.sun.tools.javac.util.List.class, JCTree.class}, new Object[] {Enum.valueOf(caseKind, "STATEMENT"), com.sun.tools.javac.util.List.of(identTree), com.sun.tools.javac.util.List.nil(), null}));
+                        JCConstantCaseLabel labelTree = F.at(pos).ConstantCaseLabel(identTree);
+                        return com.sun.tools.javac.util.List.of(
+                                new JackpotTrees.CaseWildcard(name, identTree, STATEMENT, com.sun.tools.javac.util.List.of(labelTree), null, com.sun.tools.javac.util.List.nil(), null)
+                        );
                     }
                 }
             }
-
-            return (com.sun.tools.javac.util.List) MethodHandles.lookup()
-                                                                .findSpecial(NBJavacParser.class, "switchBlockStatementGroup", MethodType.methodType(com.sun.tools.javac.util.List.class), JackpotJavacParser.class)
-                                                                .invoke(this);
+            return super.switchBlockStatementGroup();
         }
 
         @Override
@@ -1534,7 +1432,7 @@ public class Utilities {
      * Only for members (i.e. generated constructor):
      */
     public static List<? extends Tree> filterHidden(TreePath basePath, Iterable<? extends Tree> members) {
-        List<Tree> result = new LinkedList<Tree>();
+        List<Tree> result = new LinkedList<>();
 
         for (Tree t : members) {
             if (!isSynthetic(basePath != null ? basePath.getCompilationUnit() : null, t)) {
@@ -1575,6 +1473,32 @@ public class Utilities {
 
         return false;
     }
+    
+    @NbBundle.Messages({
+        "WARNING_NoRefactoringUI=Cannot start refactoring: no UI implementation is available."
+    })
+    public static void openRefactoringUIOrWarn(@NonNull Map<HintMetadata, Collection<? extends HintDescription>> hintsCollection, @NullAllowed TopComponent parent) {
+        if (openRefactoringUI(hintsCollection, parent)) {
+            return;
+        }
+        NotifyDescriptor d = new NotifyDescriptor.Message(Bundle.WARNING_NoRefactoringUI(), NotifyDescriptor.WARNING_MESSAGE);
+        DialogDisplayer.getDefault().notifyLater(d);
+    }
+    
+    public static boolean openRefactoringUI(@NonNull Map<HintMetadata, Collection<? extends HintDescription>> hintsCollection, @NullAllowed TopComponent parent) {
+        Parameters.notNull("hintsCollection", hintsCollection);
+        if (hintsCollection.isEmpty()) {
+            return true;
+        }
+        for (HintsRefactoringFactory f : Lookup.getDefault().lookupAll(HintsRefactoringFactory.class)) {
+            RefactoringUI ui = f.createRefactoringUI(hintsCollection);
+            if (ui != null) {
+                UI.openRefactoringUI(ui, parent);
+                return true;
+            }
+        }
+        return false;
+    }
 
     public static boolean isFakeBlock(Tree t) {
         return t instanceof FakeBlock;
@@ -1600,57 +1524,46 @@ public class Utilities {
         return wildcardTreeName.toString().startsWith("$$");
     }
 
-    private static final class OffsetSourcePositions implements SourcePositions {
+    private record OffsetSourcePositions(SourcePositions delegate, long offset) implements SourcePositions {
 
-        private final SourcePositions delegate;
-        private final long offset;
-
-        public OffsetSourcePositions(SourcePositions delegate, long offset) {
-            this.delegate = delegate;
-            this.offset = offset;
-        }
-
+        @Override
         public long getStartPosition(CompilationUnitTree cut, Tree tree) {
             return delegate.getStartPosition(cut, tree) + offset;
         }
 
+        @Override
         public long getEndPosition(CompilationUnitTree cut, Tree tree) {
             return delegate.getEndPosition(cut, tree) + offset;
         }
 
     }
 
-    private static final class OffsetDiagnostic<S> implements Diagnostic<S> {
-        private final Diagnostic<? extends S> delegate;
-        private final SourcePositions sp;
-        private final long offset;
+    private record OffsetDiagnostic<S>(
+            Diagnostic<? extends S> delegate, SourcePositions sp, long offset) implements Diagnostic<S> {
 
-        public OffsetDiagnostic(Diagnostic<? extends S> delegate, SourcePositions sp, long offset) {
-            this.delegate = delegate;
-            this.sp = sp;
-            this.offset = offset;
-        }
-
+        @Override
         public Diagnostic.Kind getKind() {
             return delegate.getKind();
         }
 
+        @Override
         public S getSource() {
             return delegate.getSource();
         }
 
+        @Override
         public long getPosition() {
             return delegate.getPosition() + offset;
         }
 
+        @Override
         public long getStartPosition() {
             return delegate.getStartPosition() + offset;
         }
 
+        @Override
         public long getEndPosition() {
-            if (delegate instanceof JCDiagnostic) {
-                JCDiagnostic dImpl = (JCDiagnostic) delegate;
-                
+            if (delegate instanceof JCDiagnostic dImpl) {
                 return dImpl.getDiagnosticPosition().getEndPosition(new EndPosTable() {
                     @Override public int getEndPos(JCTree tree) {
                         return (int) sp.getEndPosition(null, tree);
@@ -1666,36 +1579,36 @@ public class Utilities {
             return delegate.getEndPosition() + offset;
         }
 
+        @Override
         public long getLineNumber() {
             throw new UnsupportedOperationException("Not supported yet.");
         }
 
+        @Override
         public long getColumnNumber() {
             throw new UnsupportedOperationException("Not supported yet.");
         }
 
+        @Override
         public String getCode() {
             return delegate.getCode();
         }
 
+        @Override
         public String getMessage(Locale locale) {
             return delegate.getMessage(locale);
         }
 
     }
 
-    private static class ParserSourcePositions implements SourcePositions {
+    private record ParserSourcePositions(JavacParser parser) implements SourcePositions {
 
-        private JavacParser parser;
-
-        private ParserSourcePositions(JavacParser parser) {
-            this.parser = parser;
-        }
-
+        @Override
         public long getStartPosition(CompilationUnitTree file, Tree tree) {
             return parser.getStartPos((JCTree)tree);
         }
 
+        @Override
         public long getEndPosition(CompilationUnitTree file, Tree tree) {
             return parser.getEndPos((JCTree)tree);
         }
