@@ -44,6 +44,7 @@ import javax.swing.JEditorPane;
 import javax.swing.JPanel;
 import javax.swing.JRadioButton;
 import javax.swing.JTextField;
+import javax.swing.SwingUtilities;
 import javax.swing.event.DocumentEvent;
 import javax.swing.event.DocumentListener;
 import javax.swing.text.BadLocationException;
@@ -84,6 +85,7 @@ public final class FmtOptions {
     public static final String FOR_BRACE_PLACEMENT = "forBracePlacement"; //NOI18N
     public static final String WHILE_BRACE_PLACEMENT = "whileBracePlacement"; //NOI18N
     public static final String SWITCH_BRACE_PLACEMENT = "switchBracePlacement"; //NOI18N
+    public static final String MATCH_BRACE_PLACEMENT = "matchBracePlacement"; //NOI18N
     public static final String CATCH_BRACE_PLACEMENT = "catchBracePlacement"; //NOI18N
     public static final String USE_TRAIT_BODY_BRACE_PLACEMENT = "useTraitBodyBracePlacement"; //NOI18N
     public static final String GROUP_USE_BRACE_PLACEMENT = "groupUseBracePlacement"; //NOI18N
@@ -92,7 +94,9 @@ public final class FmtOptions {
     public static final String BLANK_LINES_AFTER_NAMESPACE = "blankLinesAfterNamespace"; //NOI18N
     public static final String BLANK_LINES_BEFORE_USE = "blankLinesBeforeUse"; //NOI18N
     public static final String BLANK_LINES_BEFORE_USE_TRAIT = "blankLinesBeforeUseTrait"; //NOI18N
+    public static final String BLANK_LINES_AFTER_USE_TRAIT = "blankLinesAfterUseTrait"; //NOI18N
     public static final String BLANK_LINES_AFTER_USE = "blankLinesAfterUse"; //NOI18N
+    public static final String BLANK_LINES_BETWEEN_USE_TYPES = "blankLinesBetweenUseType"; //NOI18N
     public static final String BLANK_LINES_BEFORE_CLASS = "blankLinesBeforeClass"; //NOI18N
     public static final String BLANK_LINES_BEFORE_CLASS_END = "blankLinesBeforeClassEnd"; //NOI18N
     public static final String BLANK_LINES_AFTER_CLASS = "blankLinesAfterClass"; //NOI18N
@@ -100,18 +104,23 @@ public final class FmtOptions {
     public static final String BLANK_LINES_BEFORE_FIELDS = "blankLinesBeforeField"; //NOI18N
     public static final String BLANK_LINES_BETWEEN_FIELDS = "blankLinesBetweenField"; //NOI18N
     public static final String BLANK_LINES_AFTER_FIELDS = "blankLinesAfterField"; //NOI18N
-    public static final String BLANK_LINES_GROUP_FIELDS_WITHOUT_DOC = "blankLinesGroupFieldsWithoutDoc"; //NOI18N
+    public static final String BLANK_LINES_EMPTY_FUNCTION_BODY = "blankLinesEmptyFunctionBody"; //NOI18N
+    public static final String BLANK_LINES_EOF = "blankLinesEndOfFile"; //NOI18N
+    public static final String BLANK_LINES_GROUP_FIELDS_WITHOUT_DOC_AND_ATTRIBUTES = "blankLinesGroupFieldsWithoutDocAndAttributes"; //NOI18N
     public static final String BLANK_LINES_BEFORE_FUNCTION = "blankLinesBeforeFunction"; //NOI18N
     public static final String BLANK_LINES_AFTER_FUNCTION = "blankLinesAfterFunction"; //NOI18N
     public static final String BLANK_LINES_BEFORE_FUNCTION_END = "blankLinesBeforeFunctionEnd"; //NOI18N
     public static final String BLANK_LINES_AFTER_OPEN_PHP_TAG = "blankLinesAfterOpenPHPTag"; //NOI18N
     public static final String BLANK_LINES_AFTER_OPEN_PHP_TAG_IN_HTML = "blankLinesAfterOpenPHPTagInHTML"; //NOI18N
     public static final String BLANK_LINES_BEFORE_CLOSE_PHP_TAG = "blankLinesBeforeClosePHPTag"; //NOI18N
+    public static final String BLANK_LINES_MAX_PRESERVED = "blankLinesMaxPreserved"; //NOI18N
     public static final String SPACE_BEFORE_WHILE = "spaceBeforeWhile"; //NOI18N
     public static final String SPACE_BEFORE_ELSE = "spaceBeforeElse"; //NOI18N
     public static final String SPACE_BEFORE_CATCH = "spaceBeforeCatch"; //NOI18N
     public static final String SPACE_BEFORE_FINALLY = "spaceBeforeFinally"; //NOI18N
     public static final String SPACE_BEFORE_ANONYMOUS_CLASS_PAREN = "spaceBeforeAnonymousClassParen"; //NOI18N
+    public static final String SPACE_BEFORE_ANONYMOUS_FUNCTION_PAREN = "spaceBeforeAnonymousFunctionParen"; //NOI18N
+    public static final String SPACE_BEFORE_ATTRIBUTE_DECL_PAREN = "spaceBeforeAttributeDeclParen"; //NOI18N
     public static final String SPACE_BEFORE_METHOD_DECL_PAREN = "spaceBeforeMethodDeclParen"; //NOI18N
     public static final String SPACE_BEFORE_METHOD_CALL_PAREN = "spaceBeforeMethodCallParen"; //NOI18N
     public static final String SPACE_BEFORE_IF_PAREN = "spaceBeforeIfParen"; //NOI18N
@@ -119,15 +128,21 @@ public final class FmtOptions {
     public static final String SPACE_BEFORE_WHILE_PAREN = "spaceBeforeWhileParen"; //NOI18N
     public static final String SPACE_BEFORE_CATCH_PAREN = "spaceBeforeCatchParen"; //NOI18N
     public static final String SPACE_BEFORE_SWITCH_PAREN = "spaceBeforeSwitchParen"; //NOI18N
+    public static final String SPACE_BEFORE_MATCH_PAREN = "spaceBeforeMatchParen"; //NOI18N
     public static final String SPACE_BEFORE_ARRAY_DECL_PAREN = "spaceBeforeArrayDeclParen"; //NOI18N
     public static final String SPACE_AROUND_UNARY_OPS = "spaceAroundUnaryOps"; //NOI18N
     public static final String SPACE_AROUND_BINARY_OPS = "spaceAroundBinaryOps"; //NOI18N
     public static final String SPACE_AROUND_TERNARY_OPS = "spaceAroundTernaryOps"; //NOI18N
+    public static final String SPACE_AROUND_COALESCING_OPS = "spaceAroundCoalescingOps"; //NOI18N
     public static final String SPACE_AROUND_STRING_CONCAT_OPS = "spaceAroundStringConcatOps"; //NOI18N
     public static final String SPACE_AROUND_ASSIGN_OPS = "spaceAroundAssignOps"; //NOI18N
     public static final String SPACE_AROUND_KEY_VALUE_OPS = "spaceAroundKeyValueOps"; //NOI18N
+    public static final String SPACE_AROUND_SCOPE_RESOLUTION_OPS = "spaceAroundScopeResolutionOps"; //NOI18N
     public static final String SPACE_AROUND_OBJECT_OPS = "spaceAroundObjectOps"; //NOI18N
+    public static final String SPACE_AROUND_NULLSAFE_OBJECT_OPS = "spaceAroundNullsafeObjectOps"; //NOI18N
     public static final String SPACE_AROUND_DECLARE_EQUAL = "spaceAroundDeclareEqual"; //NOI18N
+    public static final String SPACE_AROUND_UNION_TYPE_SEPARATOR = "spaceAroundUnionTypeSeparator"; //NOI18N
+    public static final String SPACE_AROUND_INTERSECTION_TYPE_SEPARATOR = "spaceAroundIntersectionTypeSeparator"; //NOI18N
     public static final String SPACE_BEFORE_CLASS_DECL_LEFT_BRACE = "spaceBeforeClassDeclLeftBrace"; //NOI18N
     public static final String SPACE_BEFORE_ANONYMOUS_CLASS_LEFT_BRACE = "spaceBeforeAnonymousClassLeftBrace"; //NOI18N
     public static final String SPACE_BEFORE_METHOD_DECL_LEFT_BRACE = "spaceBeforeMethodDeclLeftBrace"; //NOI18N
@@ -137,6 +152,7 @@ public final class FmtOptions {
     public static final String SPACE_BEFORE_FOR_LEFT_BRACE = "spaceBeforeForLeftBrace"; //NOI18N
     public static final String SPACE_BEFORE_DO_LEFT_BRACE = "spaceBeforeDoLeftBrace"; //NOI18N
     public static final String SPACE_BEFORE_SWITCH_LEFT_BRACE = "spaceBeforeSwitchLeftBrace"; //NOI18N
+    public static final String SPACE_BEFORE_MATCH_LEFT_BRACE = "spaceBeforeMatchLeftBrace"; //NOI18N
     public static final String SPACE_BEFORE_TRY_LEFT_BRACE = "spaceBeforeTryLeftBrace"; //NOI18N
     public static final String SPACE_BEFORE_CATCH_LEFT_BRACE = "spaceBeforeCatchLeftBrace"; //NOI18N
     public static final String SPACE_BEFORE_FINALLY_LEFT_BRACE = "spaceBeforeFinallyLeftBrace"; //NOI18N
@@ -149,9 +165,13 @@ public final class FmtOptions {
     public static final String SPACE_WITHIN_FOR_PARENS = "spaceWithinForParens"; //NOI18N
     public static final String SPACE_WITHIN_WHILE_PARENS = "spaceWithinWhileParens"; //NOI18N
     public static final String SPACE_WITHIN_SWITCH_PARENS = "spaceWithinSwitchParens"; //NOI18N
+    public static final String SPACE_WITHIN_MATCH_PARENS = "spaceWithinMatchParens"; //NOI18N
     public static final String SPACE_WITHIN_CATCH_PARENS = "spaceWithinCatchParens"; //NOI18N
     public static final String SPACE_WITHIN_TYPE_CAST_PARENS = "spaceWithinTypeCastParens"; //NOI18N
     public static final String SPACE_WITHIN_ARRAY_BRACKETS = "spaceWithinArrayBrackets"; //NOI18N
+    public static final String SPACE_WITHIN_ATTRIBUTE_BRACKETS = "spaceWithinAttributeBrackets"; //NOI18N
+    public static final String SPACE_WITHIN_ATTRIBUTE_DECL_PARENS = "spaceWithinAttributeDeclParens"; //NOI18N
+    public static final String SPACE_WITHIN_OTHER_PARENS = "spaceWithinOtherParens"; //NOI18N
     public static final String SPACE_BEFORE_COMMA = "spaceBeforeComma"; //NOI18N
     public static final String SPACE_AFTER_COMMA = "spaceAfterComma"; //NOI18N
     public static final String SPACE_BEFORE_SEMI = "spaceBeforeSemi"; //NOI18N
@@ -177,20 +197,29 @@ public final class FmtOptions {
     public static final String ALIGN_MULTILINE_ARRAY_INIT = "alignMultilineArrayInit"; //NOI18N
     public static final String GROUP_ALIGNMENT_ASSIGNMENT = "groupAlignmentAssignment"; //NOI18N
     public static final String GROUP_ALIGNMENT_ARRAY_INIT = "groupAlignmentArrayInit"; //NOI18N
+    public static final String GROUP_ALIGNMENT_MATCH_ARM_ARROW = "groupAlignmentMatchArmArrow"; //NOI18N
     public static final String WRAP_GROUP_USE_LIST = "wrapGroupUseList"; //NOI18N
     public static final String WRAP_EXTENDS_IMPLEMENTS_KEYWORD = "wrapExtendsImplementsKeyword"; //NOI18N
     public static final String WRAP_EXTENDS_IMPLEMENTS_LIST = "wrapExtendsImplementsList"; //NOI18N
     public static final String WRAP_METHOD_PARAMS = "wrapMethodParams"; //NOI18N
+    public static final String WRAP_METHOD_PARAMS_AFTER_LEFT_PAREN = "wrapMethodParamsAfterLeftParen"; // NOI18N
+    public static final String WRAP_METHOD_PARAMS_RIGHT_PAREN = "wrapMethodParamsRightParen"; // NOI18N
+    public static final String WRAP_METHOD_PARAMS_KEEP_PAREN_AND_BRACE_ON_THE_SAME_LINE = "wrapKeepParenAndBraceOnTheSameLine"; // NOI18N
     public static final String WRAP_METHOD_CALL_ARGS = "wrapMethodCallArgs"; //NOI18N
+    public static final String WRAP_METHOD_CALL_ARGS_AFTER_LEFT_PAREN = "wrapMethodCallArgsAfterLeftParen"; // NOI18N
+    public static final String WRAP_METHOD_CALL_ARGS_RIGHT_PAREN = "wrapMethodCallArgsRightParen"; // NOI18N
     public static final String WRAP_CHAINED_METHOD_CALLS = "wrapChainedMethodCalls"; //NOI18N
     public static final String WRAP_ARRAY_INIT = "wrapArrayInit"; //NOI18N
     public static final String WRAP_FOR = "wrapFor"; //NOI18N
+    public static final String WRAP_FOR_AFTER_LEFT_PAREN = "wrapForAfterLeftParen"; // NOI18N
+    public static final String WRAP_FOR_RIGHT_PAREN = "wrapForRightParen"; // NOI18N
     public static final String WRAP_FOR_STATEMENT = "wrapForStatement"; //NOI18N
     public static final String WRAP_IF_STATEMENT = "wrapIfStatement"; //NOI18N
     public static final String WRAP_WHILE_STATEMENT = "wrapWhileStatement"; //NOI18N
     public static final String WRAP_DO_WHILE_STATEMENT = "wrapDoWhileStatement"; //NOI18N
     public static final String WRAP_BINARY_OPS = "wrapBinaryOps"; //NOI18N
     public static final String WRAP_TERNARY_OPS = "wrapTernaryOps"; //NOI18N
+    public static final String WRAP_COALESCING_OPS = "wrapCoalescingOps"; //NOI18N
     public static final String WRAP_ASSIGN_OPS = "wrapAssignOps"; //NOI18N
     public static final String WRAP_BLOCK_BRACES = "wrapBlockBraces";  //NOI18N
     public static final String WRAP_GROUP_USE_BRACES = "wrapGroupUseBraces"; // NOI18N
@@ -202,6 +231,8 @@ public final class FmtOptions {
     public static final String PREFER_GROUP_USES = "preferGroupUses"; // NOI18N
     public static final String START_USE_WITH_NAMESPACE_SEPARATOR = "startUseWithNamespaceSeparator"; //NOI18N
     public static final String ALIASES_CAPITALS_OF_NAMESPACES = "aliasesCapitalsOfNamespacesNames"; //NOI18N
+    public static final String PUT_IN_PSR12_ORDER = "putInPSR12Order"; //NOI18N
+    public static final String USES_KEEP_EXISTING_TYPE_ORDER = "usesKeepExistingTypeOrder"; //NOI18N
     public static CodeStyleProducer codeStyleProducer;
 
     private FmtOptions() {
@@ -254,6 +285,7 @@ public final class FmtOptions {
             {FOR_BRACE_PLACEMENT, OBRACE_SAMELINE},
             {WHILE_BRACE_PLACEMENT, OBRACE_SAMELINE},
             {SWITCH_BRACE_PLACEMENT, OBRACE_SAMELINE},
+            {MATCH_BRACE_PLACEMENT, OBRACE_SAMELINE},
             {CATCH_BRACE_PLACEMENT, OBRACE_SAMELINE},
             {USE_TRAIT_BODY_BRACE_PLACEMENT, OBRACE_SAMELINE},
             {GROUP_USE_BRACE_PLACEMENT, OBRACE_SAMELINE},
@@ -262,13 +294,17 @@ public final class FmtOptions {
             {BLANK_LINES_AFTER_NAMESPACE, "1"}, //NOI18N
             {BLANK_LINES_BEFORE_USE, "1"}, //NOI18N
             {BLANK_LINES_BEFORE_USE_TRAIT, "1"}, //NOI18N
+            {BLANK_LINES_AFTER_USE_TRAIT, "1"}, //NOI18N
             {BLANK_LINES_AFTER_USE, "1"}, //NOI18N
+            {BLANK_LINES_BETWEEN_USE_TYPES, "0"}, //NOI18N
             {BLANK_LINES_BEFORE_CLASS, "1"}, //NOI18N
             {BLANK_LINES_AFTER_CLASS, "1"}, //NOI18N
             {BLANK_LINES_AFTER_CLASS_HEADER, "0"}, //NOI18N
             {BLANK_LINES_BEFORE_CLASS_END, "0"}, //NOI18N
             {BLANK_LINES_BEFORE_FIELDS, "1"}, //NOI18N
-            {BLANK_LINES_GROUP_FIELDS_WITHOUT_DOC, TRUE}, //NOI18N
+            {BLANK_LINES_EMPTY_FUNCTION_BODY, TRUE},
+            {BLANK_LINES_EOF, FALSE},
+            {BLANK_LINES_GROUP_FIELDS_WITHOUT_DOC_AND_ATTRIBUTES, TRUE},
             {BLANK_LINES_BETWEEN_FIELDS, "1"}, //NOI18N
             {BLANK_LINES_AFTER_FIELDS, "1"}, //NOI18N
             {BLANK_LINES_BEFORE_FUNCTION, "1"}, //NOI18N
@@ -277,12 +313,15 @@ public final class FmtOptions {
             {BLANK_LINES_AFTER_OPEN_PHP_TAG, "1"}, //NOI18N
             {BLANK_LINES_AFTER_OPEN_PHP_TAG_IN_HTML, "0"}, //NOI18N
             {BLANK_LINES_BEFORE_CLOSE_PHP_TAG, "0"}, //NOI18N
+            {BLANK_LINES_MAX_PRESERVED, "1"}, //NOI18N
 
             {SPACE_BEFORE_WHILE, TRUE},
             {SPACE_BEFORE_ELSE, TRUE},
             {SPACE_BEFORE_CATCH, TRUE},
             {SPACE_BEFORE_FINALLY, TRUE},
             {SPACE_BEFORE_ANONYMOUS_CLASS_PAREN, FALSE},
+            {SPACE_BEFORE_ANONYMOUS_FUNCTION_PAREN, TRUE},
+            {SPACE_BEFORE_ATTRIBUTE_DECL_PAREN, FALSE},
             {SPACE_BEFORE_METHOD_DECL_PAREN, FALSE},
             {SPACE_BEFORE_METHOD_CALL_PAREN, FALSE},
             {SPACE_BEFORE_IF_PAREN, TRUE},
@@ -290,15 +329,21 @@ public final class FmtOptions {
             {SPACE_BEFORE_WHILE_PAREN, TRUE},
             {SPACE_BEFORE_CATCH_PAREN, TRUE},
             {SPACE_BEFORE_SWITCH_PAREN, TRUE},
+            {SPACE_BEFORE_MATCH_PAREN, TRUE},
             {SPACE_BEFORE_ARRAY_DECL_PAREN, FALSE},
             {SPACE_AROUND_UNARY_OPS, FALSE},
             {SPACE_AROUND_BINARY_OPS, TRUE},
             {SPACE_AROUND_TERNARY_OPS, TRUE},
+            {SPACE_AROUND_COALESCING_OPS, TRUE},
             {SPACE_AROUND_STRING_CONCAT_OPS, TRUE},
             {SPACE_AROUND_KEY_VALUE_OPS, TRUE},
             {SPACE_AROUND_ASSIGN_OPS, TRUE},
+            {SPACE_AROUND_SCOPE_RESOLUTION_OPS, FALSE},
             {SPACE_AROUND_OBJECT_OPS, FALSE},
+            {SPACE_AROUND_NULLSAFE_OBJECT_OPS, FALSE},
             {SPACE_AROUND_DECLARE_EQUAL, FALSE},
+            {SPACE_AROUND_UNION_TYPE_SEPARATOR, FALSE},
+            {SPACE_AROUND_INTERSECTION_TYPE_SEPARATOR, FALSE},
             {SPACE_BEFORE_CLASS_DECL_LEFT_BRACE, TRUE},
             {SPACE_BEFORE_METHOD_DECL_LEFT_BRACE, TRUE},
             {SPACE_BEFORE_IF_LEFT_BRACE, TRUE},
@@ -307,6 +352,7 @@ public final class FmtOptions {
             {SPACE_BEFORE_FOR_LEFT_BRACE, TRUE},
             {SPACE_BEFORE_DO_LEFT_BRACE, TRUE},
             {SPACE_BEFORE_SWITCH_LEFT_BRACE, TRUE},
+            {SPACE_BEFORE_MATCH_LEFT_BRACE, TRUE},
             {SPACE_BEFORE_TRY_LEFT_BRACE, TRUE},
             {SPACE_BEFORE_CATCH_LEFT_BRACE, TRUE},
             {SPACE_BEFORE_FINALLY_LEFT_BRACE, TRUE},
@@ -319,9 +365,13 @@ public final class FmtOptions {
             {SPACE_WITHIN_FOR_PARENS, FALSE},
             {SPACE_WITHIN_WHILE_PARENS, FALSE},
             {SPACE_WITHIN_SWITCH_PARENS, FALSE},
+            {SPACE_WITHIN_MATCH_PARENS, FALSE},
             {SPACE_WITHIN_CATCH_PARENS, FALSE},
             {SPACE_WITHIN_TYPE_CAST_PARENS, FALSE},
             {SPACE_WITHIN_ARRAY_BRACKETS, FALSE},
+            {SPACE_WITHIN_ATTRIBUTE_BRACKETS, FALSE},
+            {SPACE_WITHIN_ATTRIBUTE_DECL_PARENS, FALSE},
+            {SPACE_WITHIN_OTHER_PARENS, FALSE},
             {SPACE_BEFORE_COMMA, FALSE},
             {SPACE_AFTER_COMMA, TRUE},
             {SPACE_BEFORE_SEMI, FALSE},
@@ -347,21 +397,30 @@ public final class FmtOptions {
             {PLACE_NEW_LINE_AFTER_MODIFIERS, FALSE}, //NOI18N
 
             {GROUP_ALIGNMENT_ARRAY_INIT, FALSE},
+            {GROUP_ALIGNMENT_MATCH_ARM_ARROW, FALSE},
             {GROUP_ALIGNMENT_ASSIGNMENT, FALSE},
             {WRAP_GROUP_USE_LIST, WRAP_ALWAYS},
             {WRAP_EXTENDS_IMPLEMENTS_KEYWORD, WRAP_NEVER}, //NOI18N
             {WRAP_EXTENDS_IMPLEMENTS_LIST, WRAP_NEVER}, //NOI18N
             {WRAP_METHOD_PARAMS, WRAP_NEVER}, //NOI18N
+            {WRAP_METHOD_PARAMS_AFTER_LEFT_PAREN, FALSE}, //NOI18N
+            {WRAP_METHOD_PARAMS_RIGHT_PAREN, FALSE}, //NOI18N
+            {WRAP_METHOD_PARAMS_KEEP_PAREN_AND_BRACE_ON_THE_SAME_LINE, FALSE},
             {WRAP_METHOD_CALL_ARGS, WRAP_NEVER}, //NOI18N
+            {WRAP_METHOD_CALL_ARGS_AFTER_LEFT_PAREN, FALSE}, //NOI18N
+            {WRAP_METHOD_CALL_ARGS_RIGHT_PAREN, FALSE}, //NOI18N
             {WRAP_CHAINED_METHOD_CALLS, WRAP_NEVER}, //NOI18N
             {WRAP_ARRAY_INIT, WRAP_NEVER}, //NOI18N
             {WRAP_FOR, WRAP_NEVER}, //NOI18N
+            {WRAP_FOR_AFTER_LEFT_PAREN, FALSE}, //NOI18N
+            {WRAP_FOR_RIGHT_PAREN, FALSE}, //NOI18N
             {WRAP_FOR_STATEMENT, WRAP_ALWAYS}, //NOI18N
             {WRAP_IF_STATEMENT, WRAP_ALWAYS}, //NOI18N
             {WRAP_WHILE_STATEMENT, WRAP_ALWAYS}, //NOI18N
             {WRAP_DO_WHILE_STATEMENT, WRAP_ALWAYS}, //NOI18N
             {WRAP_BINARY_OPS, WRAP_NEVER}, //NOI18N
             {WRAP_TERNARY_OPS, WRAP_NEVER},
+            {WRAP_COALESCING_OPS, WRAP_NEVER},
             {WRAP_ASSIGN_OPS, WRAP_NEVER},
             {WRAP_BLOCK_BRACES, TRUE},
             {WRAP_GROUP_USE_BRACES, TRUE},
@@ -372,7 +431,9 @@ public final class FmtOptions {
             {PREFER_MULTIPLE_USE_STATEMENTS_COMBINED, FALSE},
             {PREFER_GROUP_USES, FALSE},
             {START_USE_WITH_NAMESPACE_SEPARATOR, FALSE},
-            {ALIASES_CAPITALS_OF_NAMESPACES, FALSE}
+            {ALIASES_CAPITALS_OF_NAMESPACES, FALSE},
+            {PUT_IN_PSR12_ORDER, FALSE},
+            {USES_KEEP_EXISTING_TYPE_ORDER, TRUE},
         };
 
         defaults = new HashMap<>();
@@ -499,6 +560,10 @@ public final class FmtOptions {
                 // Ignore it
             }
 
+            // keep the caret position
+            // to avoid being scrolled to the end of the editor
+            int caretPosition = pane.getCaretPosition();
+
             Rectangle visibleRectangle = pane.getVisibleRect();
             pane.setText(previewText);
             pane.setIgnoreRepaint(true);
@@ -522,11 +587,15 @@ public final class FmtOptions {
                 } finally {
                     reformat.unlock();
                 }
+                // avoid being set to an invalid position
+                caretPosition = Integer.min(caretPosition, doc.getLength());
             } else {
                 LOGGER.warning(String.format("Can't format %s; it's not BaseDocument.", doc)); //NOI18N
             }
+            pane.setCaretPosition(caretPosition);
             pane.setIgnoreRepaint(false);
-            pane.scrollRectToVisible(visibleRectangle);
+            // invoke later because the preview pane is scrolled to the caret position when we change options after we scroll it anywhere
+            SwingUtilities.invokeLater(() -> pane.scrollRectToVisible(visibleRectangle));
             pane.repaint(100);
 
         }
@@ -570,8 +639,8 @@ public final class FmtOptions {
             @Override
             public PreferencesCustomizer create(Preferences preferences) {
                 try {
-                    return new CategorySupport(preferences, id, panelClass.newInstance(), previewText, forcedOptions);
-                } catch (InstantiationException | IllegalAccessException e) {
+                    return new CategorySupport(preferences, id, panelClass.getDeclaredConstructor().newInstance(), previewText, forcedOptions);
+                } catch (ReflectiveOperationException e) {
                     LOGGER.log(Level.WARNING, "Exception during creating formatter customiezer", e);
                     return null;
                 }
@@ -857,7 +926,7 @@ public final class FmtOptions {
             for (Preferences p : delegates) {
                 keys.addAll(Arrays.asList(p.keys()));
             }
-            return keys.toArray(new String[keys.size()]);
+            return keys.toArray(new String[0]);
         }
 
         @Override
