@@ -28,6 +28,7 @@ import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLStreamHandler;
+import java.nio.charset.StandardCharsets;
 import java.util.*;
 import java.util.concurrent.Callable;
 import java.util.concurrent.atomic.AtomicReference;
@@ -231,7 +232,7 @@ public class Activator implements BundleActivator, SynchronousBundleListener {
             // XXX set ${jdk.home}?
             List<String> bisp = new ArrayList<String>(Arrays.asList(Introspector.getBeanInfoSearchPath()));
             bisp.add("org.netbeans.beaninfo"); // NOI18N
-            Introspector.setBeanInfoSearchPath(bisp.toArray(new String[bisp.size()]));
+            Introspector.setBeanInfoSearchPath(bisp.toArray(new String[0]));
             CoreBridge.getDefault().registerPropertyEditors();
         }
         for (RunLevel rl : Lookup.getDefault().lookupAll(RunLevel.class)) {
@@ -281,7 +282,7 @@ public class Activator implements BundleActivator, SynchronousBundleListener {
             // Won't work anyway, so don't even try.
             return null;
         }
-        String respath = (String) b.getHeaders().get("OpenIDE-Module-Install");
+        String respath = b.getHeaders().get("OpenIDE-Module-Install");
         if (respath != null) {
             String fqn = respath.replaceFirst("[.]class$", "").replace('/', '.');
             try {
@@ -304,7 +305,7 @@ public class Activator implements BundleActivator, SynchronousBundleListener {
                     try {
                         InputStream is = entry.openStream();
                         try {
-                            BufferedReader r = new BufferedReader(new InputStreamReader(is, "UTF-8"));
+                            BufferedReader r = new BufferedReader(new InputStreamReader(is, StandardCharsets.UTF_8));
                             String line;
                             while ((line = r.readLine()) != null) {
                                 if (!line.isEmpty() && !line.startsWith("#")) {
@@ -314,7 +315,7 @@ public class Activator implements BundleActivator, SynchronousBundleListener {
                                     class Svc extends AbstractURLStreamHandlerService {
                                         public @Override URLConnection openConnection(final URL u) throws IOException {
                                             try {
-                                                URLStreamHandler handler = (URLStreamHandler) bundle.loadClass(fqn).newInstance();
+                                                URLStreamHandler handler = (URLStreamHandler) bundle.loadClass(fqn).getDeclaredConstructor().newInstance();
                                                 Method openConnection = URLStreamHandler.class.getDeclaredMethod("openConnection", URL.class);
                                                 openConnection.setAccessible(true);
                                                 return (URLConnection) openConnection.invoke(handler, u);
