@@ -352,7 +352,7 @@ class IndexedPropertyEditor extends Object implements ExPropertyEditor {
             }
 
             if (getConvertedType().equals(Byte.class)) {
-                value = new Byte((byte) 0);
+                value = (byte)0;
             }
 
             if (getConvertedType().equals(Character.class)) {
@@ -360,11 +360,11 @@ class IndexedPropertyEditor extends Object implements ExPropertyEditor {
             }
 
             if (getConvertedType().equals(Double.class)) {
-                value = new Double(0d);
+                value = 0D;
             }
 
             if (getConvertedType().equals(Float.class)) {
-                value = new Float(0f);
+                value = 0F;
             }
 
             if (getConvertedType().equals(Long.class)) {
@@ -372,11 +372,11 @@ class IndexedPropertyEditor extends Object implements ExPropertyEditor {
             }
 
             if (getConvertedType().equals(Short.class)) {
-                value = new Short((short) 0);
+                value = (short)0;
             }
         } else {
             try {
-                value = getConvertedType().newInstance();
+                value = getConvertedType().getDeclaredConstructor().newInstance();
             } catch (Exception x) {
                 // ignore any exception - if this fails just
                 // leave null as the value
