@@ -156,7 +156,7 @@ public final class DefaultProcessor extends OptionProcessor {
             Object inst;
             if (instance == null) {
                 realClazz = Class.forName(clazz, true, l);
-                inst = realClazz.newInstance();
+                inst = realClazz.getDeclaredConstructor().newInstance();
             } else {
                 realClazz = instance.getClass();
                 inst = instance;
@@ -191,6 +191,8 @@ public final class DefaultProcessor extends OptionProcessor {
             if (inst instanceof ArgsProcessor) {
                 ((ArgsProcessor)inst).process(env);
             }
+        } catch (CommandException exception) {
+            throw exception;
         } catch (Exception exception) {
             throw (CommandException)new CommandException(10, exception.getLocalizedMessage()).initCause(exception);
         }
